--- a/_posts/2009-11-25-2-03900.md
+++ b/_posts/2009-11-25-2-03900.md
@@ -26,7 +26,7 @@ tag: [normal]
 
 　　机械组的人研究之后，制造出了一台简易的自动碾磨机。他们用了二个从百仞滩采石场找来的石碾，做了一个电动的双碾，用穿心轴连接于立轴上，立轴上装有轴承，以减轻转动时候的阻力，用一个安有甩轮的摇动架通过铁链带动伞形齿轮，使石碾运转。
 
-　　但是加料和筛料还是手工操作，不仅效率差，而且容易搞成尘肺——这是个很麻烦的职业病，几乎没救得。虽然干这些活的都是俘虏的土著，但是劳动力对穿越者来说也是一种财富。展无涯就带着几个机械组员研究了一番，在伞形齿轮上加了一个木轮，用皮带带动一个筛粮食用的风车罗，物料由立轴顶端的漏斗加入，碾出的粉料由坡道自动流下，落入风车罗，利用风力将粗细粒分开，粗粒由坡道旁的输送料斗重新送回到石碾上面的漏斗，再次入碾子碾细。这套铁木石合作的土装置每天能粉碎差不多1吨的碎砖料。
+　　但是加料和筛料还是手工操作，不仅效率差，而且容易搞成尘肺——这是个很麻烦的职业病，几乎没救得。虽然干这些活的都是俘虏的土著，但是劳动力对穿越者来说也是一种财富。[展无涯][y004]就带着几个机械组员研究了一番，在伞形齿轮上加了一个木轮，用皮带带动一个筛粮食用的风车罗，物料由立轴顶端的漏斗加入，碾出的粉料由坡道自动流下，落入风车罗，利用风力将粗细粒分开，粗粒由坡道旁的输送料斗重新送回到石碾上面的漏斗，再次入碾子碾细。这套铁木石合作的土装置每天能粉碎差不多1吨的碎砖料。
 
 　　有了水泥，砌造轮窑还需要耐火砖。耐火砖是现代工业的基石之一，没有这个东西，不用说轮窑、水泥窑，连未来的高炉都没指望。幸好临高本地就出产耐火材料，穿越者们从砖窑附近找到了烧制耐火砖的氧化铝和氧化硅，很容易的烧出了耐火砖。
 
@@ -60,3 +60,4 @@ tag: [normal]
 
 　　“王田指挥得力，发二条。”这个奖励让王田兴奋的满脸放光，其他四个人都觉得有点酸溜溜的。多吃条咸鱼是小事，丢了面子才是大事，都盘算着晚上要狠狠的收拾几个磨洋工的家伙——杀鸡儆猴。
 [y003]: /characters/y003 "王洛宾"
+[y004]: /characters/y004 "展无涯"
