--- a/_posts/2009-12-6-2-05000.md
+++ b/_posts/2009-12-6-2-05000.md
@@ -80,13 +80,13 @@ tag: [normal]
 
 　　眼看会议将要进入了失控状态。到现在为止还没有人公开站出来支持萧白郎，但是显然这番话极具煽动力。[文德嗣][y002]意识到了危险，这种赤裸裸的，丝毫不顾忌一般道德准则，利益至上的表达对大众有极强的煽动力。从心底里，他其实并不反感萧白郎的发言，本质上他说得没错，只是很多事是不能这么赤裸裸地说出来的——这很危险。
 
-　　他想着该怎么制止事态的发展，展无涯站了起来，招呼了一声：“小萧，别说了！人还是要有点底线的，不能怎么有好处就怎么干。”
+　　他想着该怎么制止事态的发展，[展无涯][y004]站了起来，招呼了一声：“小萧，别说了！人还是要有点底线的，不能怎么有好处就怎么干。”
 
 　　“底线？大家来这里都是干啥的，扶贫？……”
 
-　　“你放屁！”展无涯勃然大怒，“前两天要不是我赶过去把电拉掉，你今天就剩一只手了！照你这么说，你有几只手关我屁事？！”
+　　“你放屁！”[展无涯][y004]勃然大怒，“前两天要不是我赶过去把电拉掉，你今天就剩一只手了！照你这么说，你有几只手关我屁事？！”
 
-　　萧白郎蔫了一下，[文德嗣][y002]暗叫侥幸，说真得今天要是这么辩论下去，还真难说会搞成什么后果。虽然知道萧白郎的极端派建议是不会通过的。但是辩论留下的裂痕是很难弥补的。幸好展无涯站出来——这次小事故他一点都不知道——不过已经顾不了这么多了，趁着这个空挡，他赶紧站了起来：
+　　萧白郎蔫了一下，[文德嗣][y002]暗叫侥幸，说真得今天要是这么辩论下去，还真难说会搞成什么后果。虽然知道萧白郎的极端派建议是不会通过的。但是辩论留下的裂痕是很难弥补的。幸好[展无涯][y004]站出来——这次小事故他一点都不知道——不过已经顾不了这么多了，趁着这个空挡，他赶紧站了起来：
 
 　　“大家不要争了，请围绕议题来讨论。怎样做，才能使得我们的利益能够最大化，又能保证生存环境能够长治久安？”
 
@@ -94,3 +94,4 @@ tag: [normal]
 
 　　邬德走出会议室的时候，觉得身上都出了冷汗。他是希望放人的，但是放人的后果是不是能和他想的一样，他没有把握——毕竟他和这些17世纪的土著，有着400年的历史差距。
 [y002]: /characters/y002 "文德嗣"
+[y004]: /characters/y004 "展无涯"
