--- a/_posts/2009-8-26-0-00700.md
+++ b/_posts/2009-8-26-0-00700.md
@@ -279,7 +279,7 @@ tag: [normal]
 
 　　但我可以讲讲我对中国人创造财富的理解，一言以蔽之，中国人创造财富的方法是“技术立国”，大宋元老院的所有执委大多数是工程师出身，少数懂会计和法律。大宋第三帝国（之前有过定都汴梁的大宋第一帝国和定都杭州的大宋第二帝国）的国父们有鉴于第一帝国和第二帝国最后被野蛮人所征服的悲惨命运，得出了结论，掌握超越这个时代所有国家的科学水平是生存下去的必要条件之一。只要掌握了超越这个时代所有国家的科学和工程水平，无论是保卫领土或者是创造财富都是轻而易举的事，因此在第三帝国回归大陆之前的几百年里面，这些遗民和后裔们把澳洲变成了一座大学堂，据说在圣地提倡两样东西：“斯巴达式的清苦生活和雅典的学术氛围”。
 
-　　就拿现在行销欧洲大陆的饮料可乐来说，它就涉及到大量的工程技术，各位在欧洲大陆夏天里面很难喝到冰凉的可乐对不对？而在这里是非常廉价的东西，季思退大人发现了单质氟和单质氯，以及有机物甲烷，然后在这个基础上又合成了二氯二氟甲烷（以上物质的分子式和结构图以及实验室制法尚属保密，恕我无法提供），它取代了过往易燃或有毒的氨和二氧化硫成为新一代的冷却剂——它气化时吸收大量内能，令附近环境变冷。在二氯二氟甲烷的基础上，展无涯大人进一步制造了利用这种冷却剂的机器——压缩机，这是在常温下制冷技术变得非常简易。
+　　就拿现在行销欧洲大陆的饮料可乐来说，它就涉及到大量的工程技术，各位在欧洲大陆夏天里面很难喝到冰凉的可乐对不对？而在这里是非常廉价的东西，季思退大人发现了单质氟和单质氯，以及有机物甲烷，然后在这个基础上又合成了二氯二氟甲烷（以上物质的分子式和结构图以及实验室制法尚属保密，恕我无法提供），它取代了过往易燃或有毒的氨和二氧化硫成为新一代的冷却剂——它气化时吸收大量内能，令附近环境变冷。在二氯二氟甲烷的基础上，[展无涯][y004]大人进一步制造了利用这种冷却剂的机器——压缩机，这是在常温下制冷技术变得非常简易。
 
 　　另外，各位在欧洲最常见到的是玻璃瓶装的可乐，另外一种可乐的包装是使用一种叫铝的合金制成的金属罐，之前是使用铁作为罐体，铝合金使得可乐较为容易携带和储存，另外铝在自然中的储存量也非常丰富，某些场合可以作为钢的代用品。在起初没有解决大规模生产铝的课题之前，铝合金罐体包装的可乐只为500个元老家族所享用，普通市民只能购买到玻璃瓶装的可乐，但现在“霍特牌”铝合金罐装可乐已经至少行销中国南部了，价格也和玻璃瓶装差不多。
 
@@ -339,3 +339,4 @@ tag: [normal]
 
 　　牛顿先生认为这也绝非波动应有的性质，所以他也不算输。到目前为止，东方大人还不愿意说出他的看法，他让我们自己去争论和思考。
 [y002]: /characters/y002 "文德嗣"
+[y004]: /characters/y004 "展无涯"
