--- a/_posts/2009-8-30-0-01100.md
+++ b/_posts/2009-8-30-0-01100.md
@@ -39,7 +39,7 @@ tag: [normal]
 
 4、  企划院总裁——邬德（adell），现任企划院总裁，历任体育组成员、渔船舰队领队、百仞公社社长、百仞社（团练）社长、民政人民委员
 
-5、 制造总监——展无涯（暂时的乌鸦），现任制造总监，历任工业组组长、机械组组长、机械工业部部长
+5、 制造总监——[展无涯][y004]（暂时的乌鸦），现任制造总监，历任工业组组长、机械组组长、机械工业部部长
 
 6、 殖民及贸易长官——司凯德（scatfish），现任殖民及贸易部长官，历任殖民及贸易部办公室主任
 
@@ -120,7 +120,7 @@ tag: [normal]
 
 17、情报——江山（larnhart），现任对外情报局常务副局长，历任卫生部实验室疫苗研发小组人员
 
-18、工业——展无涯（暂时的乌鸦），现任制造总监、机械总厂厂长，历任工业组组长、机械组组长、机械工业部部
+18、工业——[展无涯][y004]（暂时的乌鸦），现任制造总监、机械总厂厂长，历任工业组组长、机械组组长、机械工业部部
 
 　　a)科技——钟利时（smallfairyv2），现任科技人民委员，历任能源组成员长，未来任帝国科学院院士
 
@@ -448,7 +448,7 @@ tag: [normal]
 
 工业方面
 
-1、展无涯（暂时的乌鸦），现任制造总监、机械总厂厂长，历任工业组组长、机械组组长、机械工业部部长
+1、[展无涯][y004]（暂时的乌鸦），现任制造总监、机械总厂厂长，历任工业组组长、机械组组长、机械工业部部长
 
 2、萧白朗（神圣智狼），现任机械工业部成员（负责陶瓷生产），历任机械组成员
 
@@ -3443,3 +3443,4 @@ ID不明的穿越者（如有知情者请补充）
 [y001]: /characters/y001 "萧子山"
 [y002]: /characters/y002 "文德嗣"
 [y003]: /characters/y003 "王洛宾"
+[y004]: /characters/y004 "展无涯"
