--- a/_posts/2009-9-13-1-01300.md
+++ b/_posts/2009-9-13-1-01300.md
@@ -58,7 +58,7 @@ tag: [normal]
 
 　　“什么？！”[文德嗣][y002]差点跳了起来。
 
-　　“老文你别激动，别激动，”[王洛宾][y003]说，“他姓展，叫展无涯，是个技师，手艺很好，车钳刨铣样样精通……”
+　　“老文你别激动，别激动，”[王洛宾][y003]说，“他姓展，叫[展无涯][y004]，是个技师，手艺很好，车钳刨铣样样精通……”
 
 　　“好了好了，说正事，他没把你当精神病或者骗子？”
 
@@ -80,17 +80,17 @@ tag: [normal]
 
 　　“他特别欣赏你那个思路，说机加工这块都交给他好了，他准备把自己的厂子整个都搬过去。”
 
-　　展无涯并不是[文总][y002]想象中满身油污的老工人，不过三十出头的模样，穿得是Ｔ恤，头发梳得整整齐齐，一双尺寸很大，皮肤粗燥的手才暴露出了他的职业性质。
+　　[展无涯][y004]并不是[文总][y002]想象中满身油污的老工人，不过三十出头的模样，穿得是Ｔ恤，头发梳得整整齐齐，一双尺寸很大，皮肤粗燥的手才暴露出了他的职业性质。
 
 　　[文总][y002]平时因为工作性质关系，和这类的外协小加工厂接触很多。一聊之下，两个人很快就一些机加工技术问题深入的进行了探讨，共同语言拉近了双方的距离，很快便无话不谈了。
 
-　　“[文总][y002]，这么说吧，咱们干机械这行的，从来没有造不出来的东西。”展无涯的言谈里充满了工人阶级的自豪感，“就我那个小厂子好了，造坦克不敢说，造点迫击炮和机关枪还是小菜一碟。我念技校那会……”
+　　“[文总][y002]，这么说吧，咱们干机械这行的，从来没有造不出来的东西。”[展无涯][y004]的言谈里充满了工人阶级的自豪感，“就我那个小厂子好了，造坦克不敢说，造点迫击炮和机关枪还是小菜一碟。我念技校那会……”
 
 　　说着他大谈了五分钟当年是如何做了一门迫击炮作为毕业设计作业的，接着又和[王洛宾][y003]探讨起造枪的问题——后来才知道[王洛宾][y003]之所以会和展老板如此迅速的建立起牢固的友谊，主要原因就是两人都是狂热的枪炮爱好者——[文德嗣][y002]赶紧打住了这二位的高谈阔论，免得让人听到了以为这是一个酝酿中的黑枪团伙。
 
 　　他介绍了自己厂里的主要设备：剪扳机2台，折弯机80T1台，冲床63T1台、5T1台，车床2台、刨床1台，摇臂钻床1台，台钻3台，切割机1台、电焊机5台、点焊机1台、锯床1台，天车1台，磨床1台，砂轮机2台，氧焊1套，空压机1台、烘漆房设施1套。
 
-　　“其实真要艰苦一点，有三大机就齐活了。”展无涯说，“我读书的时候，爱看点军工回忆录，那时候搞军工的都是牛人，就靠个车床加台虎钳，一样能造枪造炮造机床。”他想了下，“不过材料很关键，没好材料的话，做出来的东西都会打折扣，有得连加工都没法加工。特别是一定要有合适的钢材。”
+　　“其实真要艰苦一点，有三大机就齐活了。”[展无涯][y004]说，“我读书的时候，爱看点军工回忆录，那时候搞军工的都是牛人，就靠个车床加台虎钳，一样能造枪造炮造机床。”他想了下，“不过材料很关键，没好材料的话，做出来的东西都会打折扣，有得连加工都没法加工。特别是一定要有合适的钢材。”
 
 　　[王洛宾][y003]说：“我们是要建立冶金工业的，炼铁、炼钢。”
 
@@ -102,9 +102,9 @@ tag: [normal]
 
 　　“这些问题我们可以一个个的解决。”[文德嗣][y002]精神焕发，“老展你就先来负责工业这块的准备吧。”
 
-　　“没问题！”展无涯的心情从来没有这样的充满激情。从厂里出来自己创业，摸爬滚打了也快十年了，虽然有了个小小的局面，但是生活却变得无聊乏味。每天疲于应付客户，此刻，他的眼前出现了一个前所未有的新世界，他斗志昂扬，决定在这个新世界里大干一场。
+　　“没问题！”[展无涯][y004]的心情从来没有这样的充满激情。从厂里出来自己创业，摸爬滚打了也快十年了，虽然有了个小小的局面，但是生活却变得无聊乏味。每天疲于应付客户，此刻，他的眼前出现了一个前所未有的新世界，他斗志昂扬，决定在这个新世界里大干一场。
 
-　　穿越委员会工业组就在这一天成立了，作为一种习惯的称呼，它被称为工业口。几天之后，工业口的另外一名成员也报到了，这便是后来在回忆录里与展无涯激烈争夺穿越工业之父头衔的马千瞩。
+　　穿越委员会工业组就在这一天成立了，作为一种习惯的称呼，它被称为工业口。几天之后，工业口的另外一名成员也报到了，这便是后来在回忆录里与[展无涯][y004]激烈争夺穿越工业之父头衔的马千瞩。
 
 　　马千瞩本来和[萧子山][y001]他们一样混同一个坛子，彼此有点脸熟。不过一开始他并没有参加这个虫洞的穿越讨论，而是在另一个帖子里醉心于他的全机械式计算中心系统——命名为齿轮五型——的架空设计。最初他以为[文总][y002]的虫洞和他的机械式计算机一样，纯属架空，后来他发现这伙人真得准备去明朝的时候，赶紧找熟人给报上了名。至于其动机，一点也不稀罕的：只有创造出了一个纯净的，没有芯片，自己成了权贵的新世界，才能实现他的理想：占地面积六千亩、八万马力功率、每秒运算二万次的豪华机械计算中心——这巨大的机械让他一想起来就心摇神曳。
 
@@ -116,3 +116,4 @@ tag: [normal]
 [y001]: /characters/y001 "萧子山"
 [y002]: /characters/y002 "文德嗣"
 [y003]: /characters/y003 "王洛宾"
+[y004]: /characters/y004 "展无涯"
