--- a/_posts/2009-9-14-1-01400.md
+++ b/_posts/2009-9-14-1-01400.md
@@ -48,7 +48,7 @@ tag: [normal]
 
 　　“我是李一挝的女朋友，叫李元元。我过去当文秘的，做会议记录小菜一碟。”
 
-　　这个李一挝[萧子山][y001]是知道的，也是学机加工的，一个狂热的枪械爱好者，展无涯的枪友，属于半天都没个闷屁的人物。[萧子山][y001]猜他之所以想穿越只不过是为了不受限制的造枪而已。
+　　这个李一挝[萧子山][y001]是知道的，也是学机加工的，一个狂热的枪械爱好者，[展无涯][y004]的枪友，属于半天都没个闷屁的人物。[萧子山][y001]猜他之所以想穿越只不过是为了不受限制的造枪而已。
 
 　　这个年轻的女孩子也跟着他来了，“爱你就跟你到天涯海角”看来并不是一句空话。想到这里，[萧子山][y001]不由得酸溜溜的。
 
@@ -114,7 +114,7 @@ tag: [normal]
 
 　　各小组各自推举出相关的负责人，由各组负责人组成临时执行委员会。每周召开一次协调会议，协调各部门的运作。在需要的时候，也可以临时召开。
 
-　　[文德嗣][y002]毫无意外的成为了执委会主席，本来展无涯要推举[王洛宾][y003]做工业组组长，[王洛宾][y003]推辞了，说自己在机械方面不够专业，最后还是展无涯做了组长。
+　　[文德嗣][y002]毫无意外的成为了执委会主席，本来[展无涯][y004]要推举[王洛宾][y003]做工业组组长，[王洛宾][y003]推辞了，说自己在机械方面不够专业，最后还是[展无涯][y004]做了组长。
 
 　　总务组长无人问津，大伙都不想干。又是管吃喝拉撒，又是管人事，太琐碎。要是一般的企业单位，好歹油水十足。问题他们一年之后就穿了，攒下再多的钞票也都是废纸，最后一样得贡献给组织。
 
@@ -132,3 +132,4 @@ tag: [normal]
 [y001]: /characters/y001 "萧子山"
 [y002]: /characters/y002 "文德嗣"
 [y003]: /characters/y003 "王洛宾"
+[y004]: /characters/y004 "展无涯"
