--- a/_posts/2009-9-16-1-01600.md
+++ b/_posts/2009-9-16-1-01600.md
@@ -6,11 +6,11 @@ path: 2009-9-16-1-01600.md
 tag: [normal]
 ---
 
-　　议题转入了机械制造业，这个是[文总][y002]的本行，这个话题主要围绕着到底携带什么设备进行讨论。展无涯已经贡献了一个小机械厂，他通报了这些设备的类型。
+　　议题转入了机械制造业，这个是[文总][y002]的本行，这个话题主要围绕着到底携带什么设备进行讨论。[展无涯][y004]已经贡献了一个小机械厂，他通报了这些设备的类型。
 
 　　“这些设备能够生产出我们需要的各种专用机械吗？嗯，比如说，锅炉？”
 
-　　“理论上完全可以的，就拿我的那个小厂子说吧，设备不多，但是只要有合适的材料，一般的机械装备都能给你整出来。当然，我的厂子主要是给人加工各种各样的零件，没有做过复杂的成套机械。还有一些小零件，我们一般是不造的，”展无涯挠了挠头，他不大习惯这样站在台上接受咨询，“比如说各种标准件，哦——”他意识到许多人并不知道什么是标准件，便解释了起来，“就是作紧固连接用的机械零件，比如螺丝、螺钉、垫圈这些，最好使用专门的设备制造。”
+　　“理论上完全可以的，就拿我的那个小厂子说吧，设备不多，但是只要有合适的材料，一般的机械装备都能给你整出来。当然，我的厂子主要是给人加工各种各样的零件，没有做过复杂的成套机械。还有一些小零件，我们一般是不造的，”[展无涯][y004]挠了挠头，他不大习惯这样站在台上接受咨询，“比如说各种标准件，哦——”他意识到许多人并不知道什么是标准件，便解释了起来，“就是作紧固连接用的机械零件，比如螺丝、螺钉、垫圈这些，最好使用专门的设备制造。”
 
 　　“当然要制造这些也可以，就是费事一点。我们可以做一些专门的机器来制造这些标准件。
 
@@ -134,3 +134,4 @@ tag: [normal]
 [y001]: /characters/y001 "萧子山"
 [y002]: /characters/y002 "文德嗣"
 [y003]: /characters/y003 "王洛宾"
+[y004]: /characters/y004 "展无涯"
