--- a/_posts/2009-9-20-1-02000.md
+++ b/_posts/2009-9-20-1-02000.md
@@ -10,7 +10,7 @@ tag: [normal]
 
 　　每个到来的人员，在登记之后，都必须接受为期30天的全天基本军事训练，训练内容包括队列、土工作业、越障、格斗和基本生存技能。
 
-　　训练随后，按其能力所长和有意从事的行业，由总务组安排，或者调入各专业组进行策划准备工作，或者进行相关的培训学习——重点培养动手能力。展无涯的小机械厂现在基本成了一个技工学校，堆满了报废的零件。根据各专业组的建议，另外选送一些人由穿越公司出钱，去职业培训学校进行相关的短期技能培训。
+　　训练随后，按其能力所长和有意从事的行业，由总务组安排，或者调入各专业组进行策划准备工作，或者进行相关的培训学习——重点培养动手能力。[展无涯][y004]的小机械厂现在基本成了一个技工学校，堆满了报废的零件。根据各专业组的建议，另外选送一些人由穿越公司出钱，去职业培训学校进行相关的短期技能培训。
 
 　　从前的IT精英，现在在学习砌墙铺瓦；从前的办公室文员，此时在学踩缝纫机；更多从来就没进过车间的人，却围绕着机床或者工作台，笨拙的学习着手艺。
 
@@ -84,3 +84,4 @@ tag: [normal]
 [y001]: /characters/y001 "萧子山"
 [y002]: /characters/y002 "文德嗣"
 [y003]: /characters/y003 "王洛宾"
+[y004]: /characters/y004 "展无涯"
