--- a/_posts/2010-1-16-2-09100.md
+++ b/_posts/2010-1-16-2-09100.md
@@ -62,7 +62,7 @@ tag: [normal]
 
 　　大型建筑工程机械磨损较为严重，特别是液压件的消耗较多，这些配件限于工业水平，不能修理。按现在的工程强度估计，各种易损配件将在18个月内消耗完毕。汽车、摩托车状态较好。就是燃料供应前景堪忧。柴油的储备尚多，汽油因为易挥发变质，存量不多，即将消耗完，需要尽快开发替代能源。润滑油库存较多，待用产品的开发已由农业部门展开，目标是蓖麻。四轮马车制造搁浅，原因是缺乏金属材料，转向机、避震的板簧无法制造。
 
-　　制造加工业：完成了机械厂的基础建设和设备安装，该机械厂是在展无涯的机械厂的基础上添加部分机械设备而成的。但是到目前为止，开工严重不足，处于等米下锅的状态。
+　　制造加工业：完成了机械厂的基础建设和设备安装，该机械厂是在[展无涯][y004]的机械厂的基础上添加部分机械设备而成的。但是到目前为止，开工严重不足，处于等米下锅的状态。
 
 　　木器、竹藤器的加工制造较兴旺。特别是安全帽制造形成了批量能力。博铺的木材处理和木器制造已经形成了稳定规模，有干燥窑、干馏窑各1座。不但能开出各种尺寸规格的板材、家具、木构件，还能制造木焦油、栲胶、木炭。虽然缺少黄麻，但是用本地土产的亚麻、大麻也成功的制造了相当坚固的绳子。
 
@@ -116,3 +116,4 @@ tag: [normal]
 
 　　这样的人口结构，短期来看非常有利，毕竟男性青壮年是建设的主力，但是长期看来缺少妇女的地方，男人就不会在当地成家立业，所以今后在引入外来移民的时候需要重点掌握男女比例。
 [y001]: /characters/y001 "萧子山"
+[y004]: /characters/y004 "展无涯"
