--- a/_posts/2010-1-28-2-10300.md
+++ b/_posts/2010-1-28-2-10300.md
@@ -52,7 +52,7 @@ tag: [normal]
 
 　　模具的第三个部件是型芯，是由附着在铁条上的粘土制成的，一般为圆柱体，但是在装火药的部位可能一个特殊的形状。型芯被装入主模具中，装在主模尾部的铁制型芯撑和位于模具炮口部分的粘土制圆环会把型芯固定在适当的位置。
 
-　　单独制作的炮尾阴模和炮身阴模重新组合在一起，三个模具装配牢固之后，就要加以焙烧模具完全坚固，最后模具被炮口朝上的整个埋进熔炉旁边填实压紧的土坑里。姜野设计安装了个可以把模具整个吊起的木吊架，因为当时在修建熔铁炉的时候没考虑到铸炮的需求，炼钢车间的地面是被硬化过的。不得已只好在铸造车间又修建了座熔铁炉，不过因为不需要炼铁，只是简单的将金属熔化了就可以，炉子没有使用蓄热炉。流道是一出四，季无声亲自来指导，展无涯自己也有些铸造的经验，所以第一次铸造就很成功。
+　　单独制作的炮尾阴模和炮身阴模重新组合在一起，三个模具装配牢固之后，就要加以焙烧模具完全坚固，最后模具被炮口朝上的整个埋进熔炉旁边填实压紧的土坑里。姜野设计安装了个可以把模具整个吊起的木吊架，因为当时在修建熔铁炉的时候没考虑到铸炮的需求，炼钢车间的地面是被硬化过的。不得已只好在铸造车间又修建了座熔铁炉，不过因为不需要炼铁，只是简单的将金属熔化了就可以，炉子没有使用蓄热炉。流道是一出四，季无声亲自来指导，[展无涯][y004]自己也有些铸造的经验，所以第一次铸造就很成功。
 
 　　浇铸完成之后保温24小时再从泥坑里挖出来。在进一步冷却以后阴模外面的加强筋被拿掉，铸模被打碎，炮兵小组的人用锤子和凿子清除掉炮身上残余的灰渣。
 
@@ -63,3 +63,4 @@ tag: [normal]
 　　“难怪到了1713年就改成了钻孔法了。”林深河有些沮丧。钻孔法就是先铸成实心的铁棍，再用钻机将炮膛钻出来。这个技术是由荷兰人第一个运用的，不过直到18世纪晚期才全面推广开，英国海军兵工厂直到1770年还在用上述的铸造法制造海军舰炮。
 [y002]: /characters/y002 "文德嗣"
 [y003]: /characters/y003 "王洛宾"
+[y004]: /characters/y004 "展无涯"
