--- a/_posts/2010-1-29-2-10400.md
+++ b/_posts/2010-1-29-2-10400.md
@@ -56,7 +56,7 @@ tag: [normal]
 
 　　龚振麟发明的铸模铸炮法，早于西方30年，这是中国近代少有的一项领先世界的科技成就。
 
-　　炮兵小组继续去骚扰木材加工厂，让他们先用木头制成阳模，然后季无声和展无涯一起进行翻沙铸造，铸成铁制阴模，这样就可以用来铸炮了。型芯也用铁制，内部是空心的，两头各有管道用来进水和排水。
+　　炮兵小组继续去骚扰木材加工厂，让他们先用木头制成阳模，然后季无声和[展无涯][y004]一起进行翻沙铸造，铸成铁制阴模，这样就可以用来铸炮了。型芯也用铁制，内部是空心的，两头各有管道用来进水和排水。
 
 　　当金属液浇入模具后，金属液便开始慢慢冷却，这时候内模里的水就派上用场了，靠近内模的金属液在水的作用下最先冷却凝结成钢，而在外层的金属液冷却较慢。因为热胀冷缩的原理，等到整个铸件都冷却完毕后外层后冷却的部分就会紧紧地箍住内层先冷却部分，这样整个铸件就会产生一个向内紧箍的力，就是有了这个力才使得炮管能够承受更大的膛压。这种内模控制冷却的方法可以有“身管自紧”的效果。
 
@@ -78,3 +78,4 @@ tag: [normal]
 
 　　“争什么呢？”[王洛宾][y003]赶紧过来打圆场，“这炮能不能打还是个未知数，你们瞎吵吵什么！”
 [y003]: /characters/y003 "王洛宾"
+[y004]: /characters/y004 "展无涯"
