--- a/_posts/2010-1-30-2-10500.md
+++ b/_posts/2010-1-30-2-10500.md
@@ -102,7 +102,7 @@ tag: [normal]
 
 　　“一切正常。”
 
-　　“别大意，再看看有没有裂纹什么的——”展无涯提醒着，铸铁炮不比现代兵工厂出来的大炮，“对了，我那还有台探伤仪呢，要不要拉回去看看？”
+　　“别大意，再看看有没有裂纹什么的——”[展无涯][y004]提醒着，铸铁炮不比现代兵工厂出来的大炮，“对了，我那还有台探伤仪呢，要不要拉回去看看？”
 
 　　“这没必要了吧。”林深河想这太奢侈了，“探伤仪还是以后铸钢炮的时候用好了。”
 
@@ -111,3 +111,4 @@ tag: [normal]
 　　“没事，坚固的很。”
 
 　　“走，一起去看看炮弹的情况。”
+[y004]: /characters/y004 "展无涯"
