--- a/_posts/2010-1-31-2-10600.md
+++ b/_posts/2010-1-31-2-10600.md
@@ -34,7 +34,7 @@ tag: [normal]
 
 　　线膛炮不比滑膛炮，虽然炮兵小组在铸造32磅大炮的时候，长炮（加农炮）的口径已经达到了120mm，炮兵小组的设计人员还是谨慎的把第一门Armstrong大炮的口径定为70mm。
 
-　　火炮的材质采用铸钢。铸造对已经驾轻就熟的炮兵小组已经没有难度了。主要的问题是膛线的加工。在兵工厂里这需要专门机器的，至少也要有专门的工装。马上造是来不及了，好在穿越者有可以效法的前辈——八路军、新四军的军工战士，他们在最简单的机械设备和手工条件下，一样造出了步枪和火炮。通过翻阅资料，展无涯决定模仿当年吴运铎制造平射炮时采用的一种土法挤膛线技术，即用一个橄榄形的钢柱，圆周的刻上凹凸斜线，再把钢柱硬楔入身管。
+　　火炮的材质采用铸钢。铸造对已经驾轻就熟的炮兵小组已经没有难度了。主要的问题是膛线的加工。在兵工厂里这需要专门机器的，至少也要有专门的工装。马上造是来不及了，好在穿越者有可以效法的前辈——八路军、新四军的军工战士，他们在最简单的机械设备和手工条件下，一样造出了步枪和火炮。通过翻阅资料，[展无涯][y004]决定模仿当年吴运铎制造平射炮时采用的一种土法挤膛线技术，即用一个橄榄形的钢柱，圆周的刻上凹凸斜线，再把钢柱硬楔入身管。
 
 　　这个钢柱如何制造，吴运铎只是说了一下大概，没有具体的图样。炮兵小组召集全部懂机械和制图方面的人才，连夜进行会商研究，把设计图画了出来，由姜野负责，先用翻砂铸造，再用车床把钢模车制出来。
 
@@ -68,7 +68,7 @@ tag: [normal]
 
 　　“是可以，用0.6％的碳素钢就可以。就是性能不知道够不够用。”季无声说，“可以试试看，我查查书看看热处理是怎么做得。”
 
-　　“热处理的活你干得了不？”展无涯自己也没什么把握，他就用热处理炉做过一些简单的活计。
+　　“热处理的活你干得了不？”[展无涯][y004]自己也没什么把握，他就用热处理炉做过一些简单的活计。
 
 　　“我也没把握，只能靠查书和试验了。”
 
@@ -88,7 +88,7 @@ tag: [normal]
 
 　　早期的线膛炮炮弹是类似米尼步枪弹的技术，利用爆炸气体使弹底扩张镶入膛线。所以弹体外部必须有一种软质的金属包裹，铅就是一种最合适的金属。问题随即而来——铸铁弹体和铅外皮之间的结合很难，特别是在没有水压机的情况下，勉强结合起来的结果就是英国皇家海军的Armstrong炮一样，铅皮飞落。
 
-　　“电镀眼下太奢侈了，技术上也不大够。”展无涯说。
+　　“电镀眼下太奢侈了，技术上也不大够。”[展无涯][y004]说。
 
 　　“有一种思路，不知道是不是可行，当年美国人的3英寸Shenkl炮的炮弹上用过。”
 
@@ -108,3 +108,4 @@ tag: [normal]
 
 　　“根据俘虏口供，海盗很可能会在最近向我们发动攻击！”他说着递过来一份文件，“这是治安组发出的审俘通报。”
 [y003]: /characters/y003 "王洛宾"
+[y004]: /characters/y004 "展无涯"
