--- a/_posts/2010-10-10-3-17500.md
+++ b/_posts/2010-10-10-3-17500.md
@@ -22,7 +22,7 @@ tag: [normal]
 
 　　“五桅船！”大广船出现在[文德嗣][y002]的视线中的时候，他情不自禁地拍了下扶手，这种大型中国海船还是第一次亲眼看到。临高洋面上哪里会有这种船只！这个收获可太大了。
 
-　　展无涯看到这么大的木船也吃了一惊：“起码有三百吨！”
+　　[展无涯][y004]看到这么大的木船也吃了一惊：“起码有三百吨！”
 
 　　“说少了，这船的排水量有五百到六百吨。”[文德嗣][y002]对这个很有研究。
 
@@ -48,7 +48,7 @@ tag: [normal]
 
 　　“千真万确，而且震动太大了，没精度，弹道混乱，威力还不错。”
 
-　　“有可能的。”展无涯看了看这台“打字机”，两名射手正在把冷却的枪管逐一拆解下来，一一擦拭。纸包弹的一大问题就是身管里残留特别多。
+　　“有可能的。”[展无涯][y004]看了看这台“打字机”，两名射手正在把冷却的枪管逐一拆解下来，一一擦拭。纸包弹的一大问题就是身管里残留特别多。
 
 　　“集束枪管，没有散热的装置，又是直接固定一起的，更难散热了。”
 
@@ -76,7 +76,7 @@ tag: [normal]
 
 　　他对大海扫了一眼，又看看有点倾斜的船身，然后说：“目前，我们有两个办法可以脱险：一个把等待下一次最高潮出来的时候，用船牵引把它拉出浅滩；另一个是用浮桶把它浮起来。”
 
-　　“铁筒倒是不少，不过现在都被各单位占用去了。还得叫大伙腾空。”展无涯踌躇了下，其实主要占用的就是工能委属下的各部门了。
+　　“铁筒倒是不少，不过现在都被各单位占用去了。还得叫大伙腾空。”[展无涯][y004]踌躇了下，其实主要占用的就是工能委属下的各部门了。
 
 　　“还是第一方案。放在这里夜长梦多。”[文德嗣][y002]看到这笔财物，很有些放心不下。
 
@@ -84,7 +84,7 @@ tag: [normal]
 
 　　“我想，它不会损害得太厉害。帆缆虽然全损，但是桅杆都在，再修补下风帆——不用全修好，能跑起来就是。虽然是慢些同样能开动的，嫌太慢就让67艇牵引。”
 
-　　“这工作量很大啊。”展无涯看了下巨大的船身。
+　　“这工作量很大啊。”[展无涯][y004]看了下巨大的船身。
 
 　　“没事，给我叫通陈海阳。”
 
@@ -190,3 +190,4 @@ tag: [normal]
 
 　　根据政保署的审查结果，这艘船是琼山县一个海姓缙绅出资建造的，除了他自己的货物之外，船上还搭载了客商三十八人，各有货物。
 [y002]: /characters/y002 "文德嗣"
+[y004]: /characters/y004 "展无涯"
