--- a/_posts/2010-10-31-3-19600.md
+++ b/_posts/2010-10-31-3-19600.md
@@ -94,31 +94,31 @@ tag: [normal]
 
 　　张信企图在临高搞到一台冰箱的尝试彻底的失败了——别说冰箱是现阶段最要紧的设备，就算能有冰箱给他，广州站也缺少足够的电力来驱动。光几个太阳能板的电加上一个脚踏式发电机，给电台和电脑用用就差不多了。
 
-　　大明当然也有冷藏的方法，就是用水井，井下的温度大概可以保持在二十多度。一般保鲜勉强是够了。但是水井里是做不出冰块来，没有冰块，裴莉秀提议的果汁刨冰、冰淇淋、冰棍之类的冷饮自然也没指望——广州有钱又特别讲究的人家有私人的冰窖，藏有冬天的时候自制的冰块，但是绝大多数的人没这个条件。张信写了N次信给莫笑安要他帮忙解决这个问题。力陈这东西的意义和好处。莫笑安被他扰得无法，只好去找展无涯。
+　　大明当然也有冷藏的方法，就是用水井，井下的温度大概可以保持在二十多度。一般保鲜勉强是够了。但是水井里是做不出冰块来，没有冰块，裴莉秀提议的果汁刨冰、冰淇淋、冰棍之类的冷饮自然也没指望——广州有钱又特别讲究的人家有私人的冰窖，藏有冬天的时候自制的冰块，但是绝大多数的人没这个条件。张信写了N次信给莫笑安要他帮忙解决这个问题。力陈这东西的意义和好处。莫笑安被他扰得无法，只好去找[展无涯][y004]。
 
-　　“我不是不想搞个制冷机，有了这玩意大家都舒服啊。”展无涯坐在气温高达40度的机械厂办公室里，外面是高大的桁架式的厂房。加热炉散发着巨大的热量，机器的轰鸣，马达的转动，还有落料、冲压时候钢材的巨响，使得整个环境燥热无比。几台机械厂自制的大功率鼓风电扇从门口吹来几乎能把人吹倒的强风——可惜是热得。
+　　“我不是不想搞个制冷机，有了这玩意大家都舒服啊。”[展无涯][y004]坐在气温高达40度的机械厂办公室里，外面是高大的桁架式的厂房。加热炉散发着巨大的热量，机器的轰鸣，马达的转动，还有落料、冲压时候钢材的巨响，使得整个环境燥热无比。几台机械厂自制的大功率鼓风电扇从门口吹来几乎能把人吹倒的强风——可惜是热得。
 
 　　“我要不是空调——”莫笑安知道，空调其实还容易解决点，制药厂的装得那套地能空调，运转下来反应相当不错，要不是费铜太多，还要挖深井，说不定早就推广开了。紫明楼改造里的空调也正是因为这个因素才暂时搁置下来的——计委要求紫明楼自己解决铜和挖深井的问题。现在只能要求等四川的盐井工人来了。
 
-　　“制冰机啊，这个更难了——”展无涯耸了了肩膀，“没有大功率的压缩机，没有冷媒，拿什么制冰啊。就算我造得出来在广州你打算给他们先安装个发电机吗？”
+　　“制冰机啊，这个更难了——”[展无涯][y004]耸了了肩膀，“没有大功率的压缩机，没有冷媒，拿什么制冰啊。就算我造得出来在广州你打算给他们先安装个发电机吗？”
 
 　　“倒也是。”莫笑安一想也是，这事没电力还真不好办，“这就没办法了？”
 
-　　“办法是有得，实话说很原始，也不大经济。”展无涯说，“有件事得先确认：[王洛宾][y003]准备在你们那里搞的畜力机，能不能达到1.5KW？”
+　　“办法是有得，实话说很原始，也不大经济。”[展无涯][y004]说，“有件事得先确认：[王洛宾][y003]准备在你们那里搞的畜力机，能不能达到1.5KW？”
 
 　　“一台畜力机是1马力多一点，两台全开就是2马力多了。够了。”
 
-　　展无涯点点头，拨了个电话到计委，他在电话里提起了“一台空调”，似乎是在申请要用这台空调。莫笑安等了几分钟，展无涯把电话挂断了：
+　　[展无涯][y004]点点头，拨了个电话到计委，他在电话里提起了“一台空调”，似乎是在申请要用这台空调。莫笑安等了几分钟，[展无涯][y004]把电话挂断了：
 
 　　“没问题了，督公同意了。过几天再看看吧。”
 
 　　“能造？”
 
-　　“还不敢保证。”展无涯笑了起来，“我的一种土法念头，没技术验证过，得看实际制造出来之后的效果。”
+　　“还不敢保证。”[展无涯][y004]笑了起来，“我的一种土法念头，没技术验证过，得看实际制造出来之后的效果。”
 
-　　送走了莫笑安之后，展无涯从自己的锁好的抽屉里挖出一包大红鹰，小心翼翼的抽出了一根，捏在手里又是嗅又是捏的玩弄了好一阵才点上，吸了一口。
+　　送走了莫笑安之后，[展无涯][y004]从自己的锁好的抽屉里挖出一包大红鹰，小心翼翼的抽出了一根，捏在手里又是嗅又是捏的玩弄了好一阵才点上，吸了一口。
 
-　　眼下为了满足广州站的急需。展无涯准备做得是一种他设计的土法“畜力压缩制冷机”。他当即把机械厂里暂时闲着没事干的粱信叫来，两个人拿着扳手工具到了工能委的专属仓库。
+　　眼下为了满足广州站的急需。[展无涯][y004]准备做得是一种他设计的土法“畜力压缩制冷机”。他当即把机械厂里暂时闲着没事干的粱信叫来，两个人拿着扳手工具到了工能委的专属仓库。
 
 　　虽然是工能委的仓库，但是里面的所有东西都处在计委的绝对管理之下，每一把钳子、榔头、螺丝刀都登记造册，责任到人。不管是损坏还是遗失都必须上报。管理极为严格。
 
@@ -136,13 +136,13 @@ tag: [normal]
 
 　　在临高使用煤气炉，基本上设在离人群较远的地方，炉子由专人负责，四面通风，安全性方面多少还好一些。紫明楼里人员密集，万一发生泄露，不管是爆炸还是中毒都是悲剧。
 
-　　在短接了压缩机离合器之后，压缩机居然运转起来了。展无涯又连接了他自己制作的冷凝器、节流阀和蒸发器之后，一个简单的制冷系统就出来了。
+　　在短接了压缩机离合器之后，压缩机居然运转起来了。[展无涯][y004]又连接了他自己制作的冷凝器、节流阀和蒸发器之后，一个简单的制冷系统就出来了。
 
 　　纯绿色环保畜力制冰机——当然要有电动机或者其他动力机的话效果会更好。
 
-　　接着是冷媒。破空调里的氟利昂早就没有了。到哪里去找这个冷媒呢？展无涯忽然发觉自己忽视了这个关键的问题。最后想到了马千瞩虽然没带枪来本时空，但是有好几只气狗，气狗用得不就是F12么？这可是不错的冷媒！
+　　接着是冷媒。破空调里的氟利昂早就没有了。到哪里去找这个冷媒呢？[展无涯][y004]忽然发觉自己忽视了这个关键的问题。最后想到了马千瞩虽然没带枪来本时空，但是有好几只气狗，气狗用得不就是F12么？这可是不错的冷媒！
 
-　　不过气狗可是他的私产，造个小制冰机也不是什么事关生死存亡或者产业升级的大事，要说动他把F12贡献出来可不大容易。看来只好来物质诱惑了——展无涯忽然觉得自己很冤枉：这东西造出来又不是给他自己用，凭什么要他自掏腰包去搞材料。
+　　不过气狗可是他的私产，造个小制冰机也不是什么事关生死存亡或者产业升级的大事，要说动他把F12贡献出来可不大容易。看来只好来物质诱惑了——[展无涯][y004]忽然觉得自己很冤枉：这东西造出来又不是给他自己用，凭什么要他自掏腰包去搞材料。
 
 　　但是土法造设备的诱惑力实在太大，看着图纸做东西没什么稀罕，这种富有挑战性的工作才有意思。
 
@@ -150,3 +150,4 @@ tag: [normal]
 
 　　【注：该制冰机的版权归展暂时的乌鸦所有，是否能用不知道。原文是用自行车带动的，他本人也说明过，靠自行车的输出功率是无法带动压缩机的。】
 [y003]: /characters/y003 "王洛宾"
+[y004]: /characters/y004 "展无涯"
