--- a/_posts/2010-11-1-3-19700.md
+++ b/_posts/2010-11-1-3-19700.md
@@ -6,19 +6,19 @@ path: 2010-11-1-3-19700.md
 tag: [normal]
 ---
 
-　　哎，没办法。只能拿这个去换了。展无涯肉疼无比。精品大红鹰虽然已经是去年的香烟了，但是他精心保存味道一点都没变化。
+　　哎，没办法。只能拿这个去换了。[展无涯][y004]肉疼无比。精品大红鹰虽然已经是去年的香烟了，但是他精心保存味道一点都没变化。
 
-　　这东西，弹一支出来就能办成很多事，现在居然要奉送出去一包，展无涯心疼无比。
+　　这东西，弹一支出来就能办成很多事，现在居然要奉送出去一包，[展无涯][y004]心疼无比。
 
 　　找到了马千瞩，再费了一番口舌，花费了无数口水加上一包烟，附加了制冰机造出来之后首先给他试用的承诺后终于拿到了两瓶冷媒。
 
 　　“没了P12以后的我气狗就玩不了了——”
 
-　　“您可以玩真铁——以后专门给您造个机枪……”展无涯满口敷衍着把两瓶F12藏包里去了。
+　　“您可以玩真铁——以后专门给您造个机枪……”[展无涯][y004]满口敷衍着把两瓶F12藏包里去了。
 
-　　奋战了一晚上，又调试拆装了无数次设备之后，终于在冷凝器里出现了一大块洁白的冰！展无涯和粱信顿时精神百倍——这玩意到底还是能工作的！
+　　奋战了一晚上，又调试拆装了无数次设备之后，终于在冷凝器里出现了一大块洁白的冰！[展无涯][y004]和粱信顿时精神百倍——这玩意到底还是能工作的！
 
-　　展无涯赶紧回办公室把自己的保温杯找出来，把这第一块冰装了起来给督公送去——上面还贴了张纸“喜报”，然后嘴里敲锣打鼓的一路去了。
+　　[展无涯][y004]赶紧回办公室把自己的保温杯找出来，把这第一块冰装了起来给督公送去——上面还贴了张纸“喜报”，然后嘴里敲锣打鼓的一路去了。
 
 　　粱信打电话给食堂，叫食堂赶紧拿几个保温箱来。这种土制的保温箱里的保温材料是木棉和棉花，专门用来从丰城轮运送棒冰和运送鲜活海鲜。
 
@@ -40,7 +40,7 @@ tag: [normal]
 
 　　既然太精细的做不了，工能委就打算制造一个大型的“煤气冰箱”来减少制造的技术难度——耐火陶瓷的小燃烧嘴做不了，大型的铸铁燃烧嘴总是没问题的——实际上他们准备建造一个煤气冷库。
 
-　　这个冷库首先选择在食堂建造——食堂本身有充足的沼气供应，现在又有了煤气，燃料上堪称充沛。至于保温材料，仅仅用木棉或者棉花都不能有效的保温，展无涯就使用古人最常用储冰方式——在地下建造冷库，用土壤来保温，过去的北京城里的几大冰窖，都是在腊月打冰储冰，储存的条件也就是土窑，外面用草帘子盖好之后堆上土。封存到第二年夏季开冰窖的时候，冰块的损失量小到可以忽略不计。
+　　这个冷库首先选择在食堂建造——食堂本身有充足的沼气供应，现在又有了煤气，燃料上堪称充沛。至于保温材料，仅仅用木棉或者棉花都不能有效的保温，[展无涯][y004]就使用古人最常用储冰方式——在地下建造冷库，用土壤来保温，过去的北京城里的几大冰窖，都是在腊月打冰储冰，储存的条件也就是土窑，外面用草帘子盖好之后堆上土。封存到第二年夏季开冰窖的时候，冰块的损失量小到可以忽略不计。
 
 　　临高建筑公司首先在农庄的一个小土坡下开掘了一个一面敞开式的长方形地窖，夯实地面和四壁之后，再用多孔砖铺砌。再在内壁加上保温材料。
 
@@ -62,17 +62,17 @@ tag: [normal]
 
 　　当然让这个冷库闲置还是很可惜的，计委给工能委的另一项任务就是：研究如何用煤气来驱动船上的辅机发电，使其彻底的不使用储存的柴油？
 
-　　“理论上说，当然是可以的。”展无涯笑着说，“现实当中……”
+　　“理论上说，当然是可以的。”[展无涯][y004]笑着说，“现实当中……”
 
 　　“怎么，不现实？”
 
-　　“不是不现实，而是没必要。”展无涯说，“船上明明可以外接电源的。”
+　　“不是不现实，而是没必要。”[展无涯][y004]说，“船上明明可以外接电源的。”
 
 　　现代船只入港之后完全可以使用岸上的电源，丰城轮自然也可以。
 
 　　“说白了只要把博铺电站的装机容量扩大，丰城上的船用辅机就完全没必须继续发电了。”
 
-　　展无涯继续说：“当然用煤气替代柴油给辅机作燃料发电理论上也是可以的，不过这管道的敷设可就是个大问题了。”
+　　[展无涯][y004]继续说：“当然用煤气替代柴油给辅机作燃料发电理论上也是可以的，不过这管道的敷设可就是个大问题了。”
 
 　　言下之意就是毫无必要。
 
@@ -84,7 +84,7 @@ tag: [normal]
 
 　　[萧子山][y001]觉得用不了多久，就可以为每个穿越者的住宅里配备小型的煤气冰箱了——前提是能够把煤气管道安全的铺设入户，或许将来还会给土著的住宅都安装上煤气灯。
 
-　　至于展无涯辛辛苦苦造出来的畜力制冰机，被安全的运到了广州。随后莫笑安就接到了一份电报：“速造热水瓶和大口保温桶。”——冰是造出来了，可是还没有地方储存。
+　　至于[展无涯][y004]辛辛苦苦造出来的畜力制冰机，被安全的运到了广州。随后莫笑安就接到了一份电报：“速造热水瓶和大口保温桶。”——冰是造出来了，可是还没有地方储存。
 
 　　莫笑安叹息了一声，起身往玻璃厂去了。他忽然想到了：其实热水瓶也是种不错的贸易商品嘛！
 
@@ -144,3 +144,4 @@ tag: [normal]
 
 　　一边抽气，一边再用煤气火对外瓶加热，促进气体膨胀以便快速的抽出气体。土法的抽气机当然无法测定抽气状况如何，萧白朗之前只好采用最原始的方法，反复尝试试验，直到找到最佳的抽气时间。
 [y001]: /characters/y001 "萧子山"
+[y004]: /characters/y004 "展无涯"
