--- a/_posts/2010-2-4-2-11000.md
+++ b/_posts/2010-2-4-2-11000.md
@@ -122,6 +122,7 @@ tag: [normal]
 
 　　执委会准备送些礼给诸彩老以示善意，进而和谈获得海上贸易合作。一开始准备了些塑料花及玻璃工艺品，旁边站岗的胡候见了劝道：“有道财不露白，我等显骤富于盗匪，无疑于引狼入室，永不得安宁。”众人听得他说得有理，只准备了已属于常见物品的玻璃镜子二面、绸缎十匹，又送了十两银子给施十四压惊。
 
-　　马千瞩又想起卖玻璃的事，忙叫工业部准备样品。展无涯双手一摊：“我报告打上去好几天了，熔炉到现在也没给我造，我到哪里去造样品。不如从圣船上随便拆一块给他算了。”
+　　马千瞩又想起卖玻璃的事，忙叫工业部准备样品。[展无涯][y004]双手一摊：“我报告打上去好几天了，熔炉到现在也没给我造，我到哪里去造样品。不如从圣船上随便拆一块给他算了。”
 
 　　马千瞩不得已让人从圣船上捡了块大的碎玻璃，拿给施十四说：“我等善做此物，还请老兄转告诸大当家，看是否可以代我方外销，一切好说。”施十四此时但求早一刻上船，直接顾着连声答应。
+[y004]: /characters/y004 "展无涯"
