--- a/_posts/2010-2-7-2-11300.md
+++ b/_posts/2010-2-7-2-11300.md
@@ -12,7 +12,7 @@ tag: [normal]
 
 　　冶金小组从新提炼了铜条，得到了纯度很高的铜锭和少量的白银。原料解决之后，机械组自行设计制造了一台专门冲压火帽的机器，制造了模具，用电力驱动，一次可压制10个火帽。
 
-　　确认火帽批量制造没有问题之后，火枪的组装工作就开始了。这些使用米尼弹药的前装线膛枪都是利用出发前买的高压锅炉用14毫米合金钢无缝管组装的。钢管买到以后，就在在展无涯开的机械加工厂里偷偷拉上缠踞48厘米的5条“内螺纹”。其它的击槌、扳机、簧片之类也是在他的厂里用4—5毫米厚的合金钢板冲压出来。假如当时没有这一手，要是他们自己加工膛线，恐怕到现在也没有几支线膛枪，新军估计就得用褐贝丝了——这种滑膛枪也获得了一批排队枪毙党人的狂人吹捧，[王洛宾][y003]虽然也是排队枪毙党人，但是还不够原教旨。真正的排队枪毙党是绝对谢绝线膛步枪的。
+　　确认火帽批量制造没有问题之后，火枪的组装工作就开始了。这些使用米尼弹药的前装线膛枪都是利用出发前买的高压锅炉用14毫米合金钢无缝管组装的。钢管买到以后，就在在[展无涯][y004]开的机械加工厂里偷偷拉上缠踞48厘米的5条“内螺纹”。其它的击槌、扳机、簧片之类也是在他的厂里用4—5毫米厚的合金钢板冲压出来。假如当时没有这一手，要是他们自己加工膛线，恐怕到现在也没有几支线膛枪，新军估计就得用褐贝丝了——这种滑膛枪也获得了一批排队枪毙党人的狂人吹捧，[王洛宾][y003]虽然也是排队枪毙党人，但是还不够原教旨。真正的排队枪毙党是绝对谢绝线膛步枪的。
 
 　　线膛枪不算一种很新的武器，有燧发滑膛枪的时代就有了燧发的线膛枪，与滑膛枪相比，线膛枪的好处是显而易见的：射程大、精度高，比起有效射程不到50米的燧发滑膛枪，前装线膛枪在射击精度和射程方面在当时完全可以充当狙击枪来是用。
 
@@ -26,7 +26,7 @@ tag: [normal]
 
 　　这支枪只用了40分钟就完成了，而且精度颇高，简直是完美的杰作，估计300米外能一枪放到单个骑兵。最后，[王洛宾][y003]用烙铁把自己的名字缩写烫到枪托后缘的正上方，在下边加个“J＋”表明这是一支可以当狙击枪用的好枪就算大功告成。毕竟就算是米尼式线膛步枪，也只要求对400码外的20英尺宽，8英尺高的靶子达到60%的命中率。
 
-　　看看木板上用碳条写的4个正字，[王洛宾][y003]在第4个正字的旁边重重的加上一横。旁边展无涯的小组也写完了第4个正字。看来今天这一班的50支枪生产计划没什么问题了，估计可以超额完成多几只。
+　　看看木板上用碳条写的4个正字，[王洛宾][y003]在第4个正字的旁边重重的加上一横。旁边[展无涯][y004]的小组也写完了第4个正字。看来今天这一班的50支枪生产计划没什么问题了，估计可以超额完成多几只。
 
 　　3000条钢管和配件可以造3000支步枪。另外还有大约1000份的备用配件。不过前两个星期，工业部决定把20条枪管截断成2寸左右的短管，供制造德林杰手枪使用。虽然少了20条步枪，但是却能给海军、情报局这样需要短家伙的部门配备自卫火器，GLOCK手枪他们可没打算发给土著用。
 
@@ -48,3 +48,4 @@ tag: [normal]
 
 　　身为穿越者，掌握的不仅是后世的现代科技，还拥有几百年来人类社会所凝聚起来的先进理念。有时候这样的理念比至于科技更能发挥出作用。
 [y003]: /characters/y003 "王洛宾"
+[y004]: /characters/y004 "展无涯"
