--- a/_posts/2010-4-19-3-00100.md
+++ b/_posts/2010-4-19-3-00100.md
@@ -56,7 +56,7 @@ tag: [normal]
 
 　　“无非是结构强度差些，寿命短一些，再说20世纪的百仞滩水电站的滚水坝也是条石为主的，我们可以仿效。实在不行草皮土坝也能凑合。”
 
-　　展无涯连连点头：“我赞同尽快拓展电力设施，以现在的电力供应水平，机械部门的开工率太低了。”机械厂里的许多机床到现在还没有开封——海南湿度大，开了封之后保养工作繁重，穿越者也缺少足够的油脂。
+　　[展无涯][y004]连连点头：“我赞同尽快拓展电力设施，以现在的电力供应水平，机械部门的开工率太低了。”机械厂里的许多机床到现在还没有开封——海南湿度大，开了封之后保养工作繁重，穿越者也缺少足够的油脂。
 
 　　“化工部门也是这个意见！”季思退说，“如果不是电力匮乏，我们的土法电解槽早就可以开工了，烧碱、漂白粉什么的，马上就能量产——这些东西太有用了。”
 
@@ -76,6 +76,7 @@ tag: [normal]
 
 　　二是利于调整蓄水量，有利于工农业生产。目前文澜河的灌溉效益远没有发挥出来。沿河的各大田洋，基本没有修渠的，浇灌就是靠人力和水车，效率极低。穿越者即将推广的现代农业和工业会消耗大量的水，有了水闸，旱季的工农业用水就可以得到保证。
 
-　　会议上的众人都被马千瞩勾画的美好前景说得心动不已。吴南海看到的是纵横交错的灌溉渠道；[文德嗣][y002]看到的是运河上的驳船队；展无涯看到的是无数的水轮机、发电站；[萧子山][y001]看到的是周末在河上泛舟的穿越者家庭……
+　　会议上的众人都被马千瞩勾画的美好前景说得心动不已。吴南海看到的是纵横交错的灌溉渠道；[文德嗣][y002]看到的是运河上的驳船队；[展无涯][y004]看到的是无数的水轮机、发电站；[萧子山][y001]看到的是周末在河上泛舟的穿越者家庭……
 [y001]: /characters/y001 "萧子山"
 [y002]: /characters/y002 "文德嗣"
+[y004]: /characters/y004 "展无涯"
