--- a/_posts/2010-4-20-3-00200.md
+++ b/_posts/2010-4-20-3-00200.md
@@ -46,11 +46,11 @@ tag: [normal]
 
 　　“除了耐火材料之外，选矿、高炉加料都需要些特殊的设备，希望机械部门能够提供。到时候还需要你们能大力支持啊。”季无声说。
 
-　　“没问题，”展无涯满口答应，“关键是钢材能保证，这些设备我看过了，难度不大，有些还可以用木制。”
+　　“没问题，”[展无涯][y004]满口答应，“关键是钢材能保证，这些设备我看过了，难度不大，有些还可以用木制。”
 
 　　机械工业部的目标是，在第一个五年计划内，完成机械工业的自升级体系，不仅能够满足穿越工业体系内的各种专用设备的生产、制造，还能完成自我更新和升级，
 
-　　但是机械工业部的建设面临的问题要复杂得多了。穿越集团因为船只的吨位问题，带来的机械设备是相当有限的，许多专用设备限于吨位和空间没有带来，展无涯等机械众手里拥有的装备都是最基本的通用机床，以车床为最大宗。
+　　但是机械工业部的建设面临的问题要复杂得多了。穿越集团因为船只的吨位问题，带来的机械设备是相当有限的，许多专用设备限于吨位和空间没有带来，[展无涯][y004]等机械众手里拥有的装备都是最基本的通用机床，以车床为最大宗。
 
 　　理论上说，这些最基本的车床、冲床、虎钳、刨床等等所谓的“工业母机”或者叫通用机床是可以制造出任何产品的，但是事实却远没有这样简单。
 
@@ -62,7 +62,7 @@ tag: [normal]
 
 　　所以在实际的生产运作中，标准件都是用专用机床制造的，即使制造铁钉这样最简单常见的五金件，现代也是用专门的机床生产的。
 
-　　展无涯的机械工业部的第一个任务，不是为各个工业部门去制造的他们的设备，而是先为自身体系内完成设备配套，制造一批专用的机床设备。新建一个模具厂、一个铸造厂、一个标准件厂、一个轴承链条厂和一个工具厂。
+　　[展无涯][y004]的机械工业部的第一个任务，不是为各个工业部门去制造的他们的设备，而是先为自身体系内完成设备配套，制造一批专用的机床设备。新建一个模具厂、一个铸造厂、一个标准件厂、一个轴承链条厂和一个工具厂。
 
 　　“你们不知道这个体系一旦建立对工业有多大的促进作用。机械工业可以根据各种不同的产品需求制造出不同的专用机床！组合式自动机床！”[王洛宾][y003]兴奋的说，“知道什么叫大工业么？有了这个体系，我们就有真正的大工业了。”
 
@@ -74,7 +74,7 @@ tag: [normal]
 
 　　“我就要K98好了，要不MP44也行。”魏爱文不亏是忠诚的哈德分子。
 
-　　“完成机械工业部门的自我配套之后，我们会试验性的进行通用机床的再生产，或者说叫自我复制吧。”展无涯说，“毕竟以后的机械厂不会只有一个，通用设备的需求会很大。”
+　　“完成机械工业部门的自我配套之后，我们会试验性的进行通用机床的再生产，或者说叫自我复制吧。”[展无涯][y004]说，“毕竟以后的机械厂不会只有一个，通用设备的需求会很大。”
 
 　　姜野说：“现在我们拥有的机床还不如我过去上班的工厂的一个车间多呢。”
 
@@ -101,3 +101,4 @@ tag: [normal]
 　　“这个以后再说，”马千瞩赶紧把话题又拉了回来，“机械工业部谈谈能为各个部门提供多少专门设备吧。”
 [y002]: /characters/y002 "文德嗣"
 [y003]: /characters/y003 "王洛宾"
+[y004]: /characters/y004 "展无涯"
