--- a/_posts/2010-4-22-3-00400.md
+++ b/_posts/2010-4-22-3-00400.md
@@ -58,7 +58,7 @@ tag: [normal]
 
 　　他接着说：“我们农委会的下一部计划是开展农业互助组的活动，给予参加这一体系的农民和地主优质农具，会极大的增加我们的吸引力，而且有利于解放本地劳力。”
 
-　　“可以，加工农具对我们机械部门来说不算难事。那些大家伙是什么？”展无涯问。
+　　“可以，加工农具对我们机械部门来说不算难事。那些大家伙是什么？”[展无涯][y004]问。
 
 　　“是农业机械。收割机、轮式犁、条播机……”
 
@@ -120,3 +120,4 @@ tag: [normal]
 
 　　执委会原本也期望着这个卷烟厂不仅能够满足穿越众自己的需求，还能称为他们外贸商品的一个增长点——这倒也不算太妄想，明末的烟草需求已经很大，广东的烟草产量就已经非常可观。卷烟这种新东西，模样、口味独特，抽起来又方便，不管是追求新奇感受的上层，还是追求简单实用的下层，卷烟都能满足他们的需求。
 [y002]: /characters/y002 "文德嗣"
+[y004]: /characters/y004 "展无涯"
