--- a/_posts/2010-4-27-3-00900.md
+++ b/_posts/2010-4-27-3-00900.md
@@ -10,7 +10,7 @@ tag: [normal]
 
 　　季思退指挥人先把所有的原料投入烧结炉进行煅烧，以去除掉水分。出炉之后再将烧结块切割成小块。逐一的投入到坩锅内进行熔化——烧结料的体积比玻璃液要大得多，所以必须等前面的熔化之后才能投入新的原料。
 
-　　这些工作全部是由学徒们进行的。从广州收容来的孩子中间，年龄较大，不适合读书培养的孩子编入学徒总队，采用徒工制教育。学徒制是一种在实际生产过程中以言传身教为主要形式的技能传授方式。可以在较短时间内培养出大批有基本技能的技术工人。对穿越集团的工业发展有重要作用——根据展无涯等人的估计，3-6个月之后，工业部门多数简单工种都可以由本地的徒工来担任了，拥有高级技能的穿越众可以把精力放在更复杂、更精密的工作中去。
+　　这些工作全部是由学徒们进行的。从广州收容来的孩子中间，年龄较大，不适合读书培养的孩子编入学徒总队，采用徒工制教育。学徒制是一种在实际生产过程中以言传身教为主要形式的技能传授方式。可以在较短时间内培养出大批有基本技能的技术工人。对穿越集团的工业发展有重要作用——根据[展无涯][y004]等人的估计，3-6个月之后，工业部门多数简单工种都可以由本地的徒工来担任了，拥有高级技能的穿越众可以把精力放在更复杂、更精密的工作中去。
 
 　　学徒总队采用集中住宿，军事化管理的模式。每天早晨6点起床进行早锻炼，跑步做操。随后吃早饭，在服装和伙食待遇上面他们甚至比学校的孩子还要好一些——毕竟在工厂里劳作的消耗要比读书大得多。伙食标准是每天保证2570大卡热量。供应的品种和穿越众差不多：糙米、红薯、蔬菜和鱼制品。没有油脂或者肉类。
 
@@ -94,3 +94,4 @@ tag: [normal]
 
 　　碾磨的过程是这样的：需要碾磨的玻璃板下面涂上一层石灰以免其在打磨的时候移动。再在需要打磨的平板玻璃上另放一块小一半的玻璃板，上面的玻璃板上粘有一块木板，在木板上再固定一只由轻质硬木做的水平轮。接着这只轮子可以将上面的玻璃板来回的移动，从而可以在两块玻璃板之间形成稳定的摩擦。为了增加摩擦效果，要在两块玻璃板之间注入水和细沙。碾磨台的四周还要安装凸起的边缘挡条保证水和砂不会流失掉。
 [y003]: /characters/y003 "王洛宾"
+[y004]: /characters/y004 "展无涯"
