--- a/_posts/2010-4-29-3-01100.md
+++ b/_posts/2010-4-29-3-01100.md
@@ -36,7 +36,7 @@ tag: [normal]
 
 　　“没错，工厂里不当心的话随时会有伤亡事故的。现在的学徒还好些，小孩子接受能力强，成年职工就不大注意，还觉得我们小题大做——迟早要出工伤。”姜野深以为然。
 
-　　“没办法，没有血的教训，人是记不住的。”展无涯叹息了一声，说：“这个不多说了。我们生产设备的方针是：循序渐进，小步快跑，不断改进。生产技术上反正是在重复前人曾经走过的老路，技术改进都是有依据可循的，也不会走弯路。”
+　　“没办法，没有血的教训，人是记不住的。”[展无涯][y004]叹息了一声，说：“这个不多说了。我们生产设备的方针是：循序渐进，小步快跑，不断改进。生产技术上反正是在重复前人曾经走过的老路，技术改进都是有依据可循的，也不会走弯路。”
 
 　　从技术简单的设备着手，循序渐进的提高设备的技术含量和加工难度，这样既能快速攀登科技树，又能避免大跃进式的发展带来风险。
 
@@ -48,7 +48,7 @@ tag: [normal]
 
 　　当然这种轨道并不能跑火车，只是两根轧制成型的熟铁条直接镶嵌铺设在混凝土地坪上，承载力不大。原本机械组是准备用硬木轨道的，考虑到临高的气候——木制品在雨季很容易朽烂损坏，还是用了锻造铁——它比钢要便宜，又比生铁铸造的轨道坚韧，是早期铁路轨道的主要用材。
 
-　　原本展无涯设计这种轨道只不过是模仿前世里车间与车间之间的简易运输方式而已——他在喷漆车间干过一阵，大型的工件就是装在平板车上顺着轨道从上一个车间推送过来的。既节省人力又节约时间，效率高。
+　　原本[展无涯][y004]设计这种轨道只不过是模仿前世里车间与车间之间的简易运输方式而已——他在喷漆车间干过一阵，大型的工件就是装在平板车上顺着轨道从上一个车间推送过来的。既节省人力又节约时间，效率高。
 
 　　但是穿越众中间的火车党人一看到轨道不免就春心荡漾起来，在一干人的联名上书之下，执委会终于被打动，于是原本只是车间之间的简易轨道变成了一套复杂的“轨道系统”。
 
@@ -87,3 +87,4 @@ tag: [normal]
 　　难道还要专门准备十个人当启动工？显然这种车辆只能作为交通车或者运送轻型的物件。
 [y002]: /characters/y002 "文德嗣"
 [y003]: /characters/y003 "王洛宾"
+[y004]: /characters/y004 "展无涯"
