--- a/_posts/2010-5-6-3-01800.md
+++ b/_posts/2010-5-6-3-01800.md
@@ -36,7 +36,7 @@ tag: [normal]
 
 　　对待敌人要像冬天般严酷无情。这话大家都懂。
 
-　　“首要目标获取椰子和椰子制品。我们的油脂供应能不能跟上工业发展这个至关重要。”展无涯赶紧提出自己的要求。
+　　“首要目标获取椰子和椰子制品。我们的油脂供应能不能跟上工业发展这个至关重要。”[展无涯][y004]赶紧提出自己的要求。
 
 　　吴南海说：“我也想多点油炒菜。”
 
@@ -54,11 +54,11 @@ tag: [normal]
 
 　　“我们又不出远海，沿海风浪小，应该可以。资料上说过：中世纪的北非国家都这样在地中海地区运输木材的。”
 
-　　“我也要一样东西，可能比较难搞，但是非常有用，”展无涯也提出了自己的要求。
+　　“我也要一样东西，可能比较难搞，但是非常有用，”[展无涯][y004]也提出了自己的要求。
 
 　　“什么？”
 
-　　“鹿皮。”展无涯说，“用来代替橡胶做传动皮带。”
+　　“鹿皮。”[展无涯][y004]说，“用来代替橡胶做传动皮带。”
 
 　　这倒的确是更为迫在眉睫的需求，随着原动机和各种自制机械的投产，机械传动对皮带的需求大大增加。机械部门暂时靠的是储备，但是有限的储备显然不可能支撑到橡胶成熟——根据吴南海的计算，穿越者的生胶能形成工业运用的规模起码在15年以上。
 
@@ -84,7 +84,7 @@ tag: [normal]
 
 　　“孝敬下当地的官吏士绅什么的。我们又不是西班牙人，说是贸易，其实一路抢劫。”
 
-　　展无涯担心地说：“不过，这样一次大规模出动，得出动多少人和船？我担心会损害与广东和澳门之间的货物运输。”工能委比任何部门都依赖海上的运输，听他们的计划有些担心了——这不得起码出动2艘70吨级的船只？
+　　[展无涯][y004]担心地说：“不过，这样一次大规模出动，得出动多少人和船？我担心会损害与广东和澳门之间的货物运输。”工能委比任何部门都依赖海上的运输，听他们的计划有些担心了——这不得起码出动2艘70吨级的船只？
 
 　　[文德嗣][y002]惋惜地说：“如果集中资源，船厂的纵帆船应该可以在10天内完工。”
 
@@ -138,3 +138,4 @@ tag: [normal]
 
 　　装备方面倒是没砍多少：增加了6把弩——都是机械部自制的试验性产品，尺寸款式各不相同，随钢弩还配发了二个国产瞄准镜和一个俄罗斯产的红外夜视瞄准镜。加配2部步话机，另外勘探队的电脑用电权由相对级变为了绝对级——24小时不间断供电。
 [y002]: /characters/y002 "文德嗣"
+[y004]: /characters/y004 "展无涯"
