--- a/_posts/2010-8-24-3-12800.md
+++ b/_posts/2010-8-24-3-12800.md
@@ -66,7 +66,7 @@ tag: [normal]
 
 　　析出过盐的电解液继续加热浓缩，直到碱液的浓度达到30％左右就成为可以化工用。产品。当然也可以继续浓缩干燥成固体，但是这样做实在太过耗煤，对穿越者来说不合算。
 
-　　硫酸、盐酸、烧碱的成功制造，给了工能委很大的信心，[王洛宾][y003]、展无涯等等一干人，只要有空都跑这两个简陋的车间来看看，瞧瞧这土法上马的设备。
+　　硫酸、盐酸、烧碱的成功制造，给了工能委很大的信心，[王洛宾][y003]、[展无涯][y004]等等一干人，只要有空都跑这两个简陋的车间来看看，瞧瞧这土法上马的设备。
 
 　　这两套装置虽然简陋，带来的效益却是无可估量，根据季思退的测算，在保证原料和能源供应的条件下，接触法硫酸车间按三班制配备工人15名，年开工时间345天，日产98％的浓硫酸1吨，必要时候可增加到1.2吨每天；食盐电解车间按三班制配备工人24人，年开工345天计算，可年产烧碱47.5吨，漂白粉87吨，氯酸钙2吨，氯化钙6吨。精盐（95％纯度氯化钠）47.5吨，盐酸30吨。
 
@@ -114,3 +114,4 @@ tag: [normal]
 
 　　真实的原因当然并非如此！时袅仁坐在他的“本时空第一个医学检验中心”自信的翘起了二郎腿堆着一堆便便的样本罐发出踌躇满志的笑容。化工部的这次的投产成功让他原本对制药厂逐渐冷下来的热情又燃烧起来——让他干劲大增，琢磨着还能做出些什么药品来。这胜过苦练内功十年。穿越集团里有人啊！
 [y003]: /characters/y003 "王洛宾"
+[y004]: /characters/y004 "展无涯"
