--- a/_posts/2011-11-18-4-19700.md
+++ b/_posts/2011-11-18-4-19700.md
@@ -58,9 +58,9 @@ tag: [normal]
 
 　　最后海军提出要求：至少在1630财政年度内用追加拨款的方式开工建造2艘千吨级的三桅风帆巡航舰，1631年财政年度内，再开工6……10艘500吨级的武装辅助船只。
 
-　　“显然，这有点仓促了。”马千瞩等陈海阳发言结束之后才慢条斯理地说道，“大型战舰，当然很有用。不过，即使不谈我们的技术能力和物资储备够不够建造这种19世纪水平的巡航舰，这条千吨级的船建造周期起码要1年吧？”他说着回头看了下展无涯。
+　　“显然，这有点仓促了。”马千瞩等陈海阳发言结束之后才慢条斯理地说道，“大型战舰，当然很有用。不过，即使不谈我们的技术能力和物资储备够不够建造这种19世纪水平的巡航舰，这条千吨级的船建造周期起码要1年吧？”他说着回头看了下[展无涯][y004]。
 
-　　“三百吨的木船，如果材料足够，人手也足够，突击建造大约要六个月。”展无涯说道，“不过现在我们能够建造铁肋船，建造周期可以进一步缩短。三到四个月吧。”
+　　“三百吨的木船，如果材料足够，人手也足够，突击建造大约要六个月。”[展无涯][y004]说道，“不过现在我们能够建造铁肋船，建造周期可以进一步缩短。三到四个月吧。”
 
 　　“显然，我们现在需要建造的不是这样大船——因为我们要的是船能够在短时间内投入使用，比如二三个月之内。”马千瞩说，“因为现有的海军船只，在半年内都会面临大修和维护的问题，开工建造要一年之后才能投入使用的船只只会造成海军力量的空档期。”
 
@@ -74,7 +74,7 @@ tag: [normal]
 
 　　“蒸汽机要装，可以先安装一台较小型的，有个50马力的就够了。”[文德嗣][y002]插话道，“作为操帆的辅助动力。有蒸汽机动力辅助操帆，会大大降低对水手的操帆能力，而且还能节约很多的人力。”
 
-　　展无涯说：“使用铁肋木壳结构的话，四个月左右可以完工。”
+　　[展无涯][y004]说：“使用铁肋木壳结构的话，四个月左右可以完工。”
 
 　　马千瞩说：“还是慢了点，最好能够在二三个月内投入使用。”
 
@@ -111,3 +111,4 @@ tag: [normal]
 　　这种船是以1860年代的蒸汽－风帆混合动力巡洋舰为蓝本的。这种吨位的战舰，在当时的美国海军中被划为三级巡洋舰。作为破袭船，在美国内战中使用非常广泛，足迹遍布世界各大洋。
 [y001]: /characters/y001 "萧子山"
 [y002]: /characters/y002 "文德嗣"
+[y004]: /characters/y004 "展无涯"
