--- a/_posts/2011-11-21-4-20000.md
+++ b/_posts/2011-11-21-4-20000.md
@@ -102,7 +102,7 @@ tag: [normal]
 
 　　锡在古代中国也是最普遍使用的贱金属，企划院里的库存比锌更多。何况用量微不足道。
 
-　　企划院批准了生产锡黄铜带的生产计划。临高的钢铁联合体内有一座规模很小的轧钢厂，其中就有2座热轧机，可以很方便的冷热轧制各种钢板和带钢。不过展无涯决定还是专门仿制一台专用的轧机来生产——毕竟将来钢铁制造业的连续生产是一个趋势，不可能今天因为要轧制铜带就临时停机转产。
+　　企划院批准了生产锡黄铜带的生产计划。临高的钢铁联合体内有一座规模很小的轧钢厂，其中就有2座热轧机，可以很方便的冷热轧制各种钢板和带钢。不过[展无涯][y004]决定还是专门仿制一台专用的轧机来生产——毕竟将来钢铁制造业的连续生产是一个趋势，不可能今天因为要轧制铜带就临时停机转产。
 
 　　轧机简单地说来就是一连串的轧辊，压力由小到大。这其中最关键的是轧辊的自身强度和动力水平。这两者对已经能够量产大功率蒸汽机和各种牌号的高中低炭钢材的制造总监部来说不算难事。
 
@@ -116,7 +116,7 @@ tag: [normal]
 
 　　一艘木材经过经过精心处理，船底包铜的木帆船，在良好的定期维护之下可以用上50……70年。甚至100年也没有问题。元老们虽然不至于要854改服役这么久，但是大家期望它至少能用上10年。就算不能当军舰也可以当运输船用。
 
-　　蒸汽机上机械工业部有足够的技术储备，可以批量生产12马力、50马力、100马力、200马力和500马力的蒸汽机——展无涯按照[王洛宾][y003]的标准化体系建设的要求，规定蒸汽机采用全部标准化设计。能够通用的部件全部按照统一的标准和尺寸制造。并且尽可能的缩小公差——后者是整个临高工业体系里正在孜孜不倦的努力目标。
+　　蒸汽机上机械工业部有足够的技术储备，可以批量生产12马力、50马力、100马力、200马力和500马力的蒸汽机——[展无涯][y004]按照[王洛宾][y003]的标准化体系建设的要求，规定蒸汽机采用全部标准化设计。能够通用的部件全部按照统一的标准和尺寸制造。并且尽可能的缩小公差——后者是整个临高工业体系里正在孜孜不倦的努力目标。
 
 　　船用蒸汽机因为船只布局和推进方式的不同，与普通的陆上使用蒸汽机有很大的不同。而机械工业部还得开发两种不同的蒸汽机以分别适应桨轮——也就是所谓的明轮推进和螺旋桨推进。
 
@@ -128,6 +128,7 @@ tag: [normal]
 
 　　“我记得这转动轴是有讲究的。”蒙德忽然想了起来，“我听造船厂的老工人吹过，过去老一点的船只用得铁梨木轴承，这种特殊的木料轴承异常坚硬，不需要油做润滑，而是靠水润滑，轴与之摩擦会产生一种光滑的水溶物质。即能润滑轴承又能保证水不能透过轴套进入船舱。听他说铁梨木轴承保存时要保持湿润，不然干燥会裂纹影响使用，价格非常贵。”
 
-　　“铁梨木？这东西听起来好耳熟。貌似我们的船材储备中有啊。”展无涯想了起来，从百图村缴来得船材中就有所谓的铁力木，不知道是不是同一种东西。
+　　“铁梨木？这东西听起来好耳熟。貌似我们的船材储备中有啊。”[展无涯][y004]想了起来，从百图村缴来得船材中就有所谓的铁力木，不知道是不是同一种东西。
 [y002]: /characters/y002 "文德嗣"
 [y003]: /characters/y003 "王洛宾"
+[y004]: /characters/y004 "展无涯"
