--- a/_posts/2011-11-23-4-20200.md
+++ b/_posts/2011-11-23-4-20200.md
@@ -22,7 +22,7 @@ tag: [normal]
 
 　　按照额定五百马力蒸汽机输出功率，只要1台这样的锅炉就能满足蒸汽机的需求。不过船上使用蒸汽的地方还很多，多余的蒸汽可以用来做饭、为船员们提供蒸馏水……最终决定在854改的船体内安装两台这种锅炉。
 
-　　854改工程组依然审慎的决定开始只选用制造较为简单的500马力蒸汽机作为动力。船用蒸汽机对尺寸和运作方式有特殊的需求，所以目前临高工业广泛使用的各种标准蒸汽机是不能直接装船，必须得重新开发一种专门的船用蒸汽机。展无涯的意见是这种蒸汽机要作为一种标准化的装备，如果没有特殊的要求就会普遍安装在所有需要500马力动力的船只上。
+　　854改工程组依然审慎的决定开始只选用制造较为简单的500马力蒸汽机作为动力。船用蒸汽机对尺寸和运作方式有特殊的需求，所以目前临高工业广泛使用的各种标准蒸汽机是不能直接装船，必须得重新开发一种专门的船用蒸汽机。[展无涯][y004]的意见是这种蒸汽机要作为一种标准化的装备，如果没有特殊的要求就会普遍安装在所有需要500马力动力的船只上。
 
 　　最终负责蒸汽机开发的孙立等人决定使用19世纪中晚期运用广泛，技术成熟的往复倒置直立式蒸汽机，它在船体内占地面积最小，必要的时候船内还可以安装两台机器，为以后使用双螺旋桨打下基础。孙立主持制造的这种蒸汽机是比过去效率更高得复胀式，以后可以再改进为三胀、四胀。制造总监部决定先从复胀式开始仿制，逐步改进。
 
@@ -61,3 +61,4 @@ tag: [normal]
 　　“据说19世纪工人普遍工作都在12-14小时，我觉得我们12小时工作制维持几个月不会有很大影响。伙食方面再加强一些，我想申请多给工人伙食补助——特别是蛋白质免费配给额度，还有糖果。另外也可以分发精力补充剂。”
 
 　　邬德同意了他的要求，随后，他又命令从近期从检疫营结束“训练”的劳动力由造船厂优先选用。而芳草地的每周的“学工”活动也大多改为到造船厂和其他与造船有关的工业部门去“学习劳动”。这些学生虽然不见得懂技术，起码能写会算——这种最简单的技能在临高的工人群体中也是很少见的。
+[y004]: /characters/y004 "展无涯"
