--- a/_posts/2011-2-12-3-30000.md
+++ b/_posts/2011-2-12-3-30000.md
@@ -56,7 +56,7 @@ tag: [normal]
 
 　　“既然给甲子码头配了蒸汽机，干脆就运一台蒸汽吊车去，码头装卸速度能快许多。否则锅炉的蒸汽也浪费了。”马千瞩说。
 
-　　展无涯说：“在海家码头也得增加一整套设备才行。不然一边通一边堵。”
+　　[展无涯][y004]说：“在海家码头也得增加一整套设备才行。不然一边通一边堵。”
 
 　　“海家码头问题不大，可以使用当地土著劳动力搞人海战术。反正劳动力不值钱。”马千瞩想了想，“不是我不舍得几台设备，那里毕竟是大明统治的核心区，蒸汽机锅炉折腾起来太明目张胆了。”
 
@@ -76,3 +76,4 @@ tag: [normal]
 
 　　有了海量的钢铁供应，穿越集团的工业生产才能摆脱现在这种小规模的近乎加工厂一样的规模，走上真正的大工业生产的道路。
 [y003]: /characters/y003 "王洛宾"
+[y004]: /characters/y004 "展无涯"
