--- a/_posts/2011-2-15-3-30300.md
+++ b/_posts/2011-2-15-3-30300.md
@@ -16,13 +16,13 @@ tag: [normal]
 
 　　这种小型蒸汽机很快定型投入了量产，因为它重量轻得足可以装备舢板，而这种小型艇的动力化又是穿越集团目前急需的。不仅用于内河交通，还装在稍大一些的小艇上用作港口巡逻警备。
 
-　　工能委根据指示，把这种蒸汽机安装到交通艇上，改造成拖轮，再按照[王洛宾][y003]的图纸，制造专用的浅吃水小驳船。展无涯看到图纸大吃一惊。
+　　工能委根据指示，把这种蒸汽机安装到交通艇上，改造成拖轮，再按照[王洛宾][y003]的图纸，制造专用的浅吃水小驳船。[展无涯][y004]看到图纸大吃一惊。
 
 　　“[王工][y003]，你这是驳船吗？”
 
 　　“当然是驳船。”
 
-　　“我看怎么和口棺材差不多？”展无涯说，“尺寸稍微大点，水线下面稍有流线型之外，基本就口浮动棺材嘛！”
+　　“我看怎么和口棺材差不多？”[展无涯][y004]说，“尺寸稍微大点，水线下面稍有流线型之外，基本就口浮动棺材嘛！”
 
 　　为了减轻船只的自重，这种小型驳船是用铆接铁板制造的，看上去比木结构的交通艇要单薄多了，当然吃水也浅得多。
 
@@ -32,13 +32,13 @@ tag: [normal]
 
 　　不过这东西的吃水的确够浅，能够满足在南渡江上的航行需求。装上了小型蒸汽机的拖船也能勉强通过。当然对拖船的载重要精打细算。燃料不能装得太多，只能满足单程。反正在海家码头也能补充到燃料，问题不算太大。
 
-　　展无涯打算改装4艘交通艇作为拖船，每艘拖轮单航次可运25吨，机动船的速度比较快，一天可以走两个航次，每天从甲子矿运出的褐煤就是200吨。加上洗煤厂投产之后运出的是精煤，不再是原先包含有60％杂质的原煤，里外计算等于把每日运输量提高到了相当于原先运量550吨的水平，煤焦化联合厂足够用了。
+　　[展无涯][y004]打算改装4艘交通艇作为拖船，每艘拖轮单航次可运25吨，机动船的速度比较快，一天可以走两个航次，每天从甲子矿运出的褐煤就是200吨。加上洗煤厂投产之后运出的是精煤，不再是原先包含有60％杂质的原煤，里外计算等于把每日运输量提高到了相当于原先运量550吨的水平，煤焦化联合厂足够用了。
 
-　　“实际上不可能维持这么大的运量的。”展无涯说，“我认为这种蒸汽机的设备完好率不会这么高，扣除定期维护保养和出故障维修的时间，航线上保持3艘拖轮是能办到的，即使这样每天的运量也有150吨了。”
+　　“实际上不可能维持这么大的运量的。”[展无涯][y004]说，“我认为这种蒸汽机的设备完好率不会这么高，扣除定期维护保养和出故障维修的时间，航线上保持3艘拖轮是能办到的，即使这样每天的运量也有150吨了。”
 
 　　“你太乐观了，要我说，这拖轮用了半年后能维持2艘同时运作你们机械厂就是人品大爆发了。”[王洛宾][y003]说。
 
-　　“小蒸汽机半年之后肯定会大规模量产，坏了直接换！”展无涯豪情大发，“只等把田独的铁矿石开回来。”
+　　“小蒸汽机半年之后肯定会大规模量产，坏了直接换！”[展无涯][y004]豪情大发，“只等把田独的铁矿石开回来。”
 
 　　[王洛宾][y003]笑了笑，豪情不错，不过事情显然没这么简单。
 
@@ -62,7 +62,7 @@ tag: [normal]
 
 　　“我批准了。”马千瞩扫了一眼申请书，心里快速的核算了大概要消耗多少库存的材料，答应了。
 
-　　“这可太好了，不过你得和展无涯他们说说，给我快一点，要不就来不及做衣服了。”
+　　“这可太好了，不过你得和[展无涯][y004]他们说说，给我快一点，要不就来不及做衣服了。”
 
 　　“我知道，我知道，你先去忙你得吧，不送了。”
 
@@ -100,3 +100,4 @@ tag: [normal]
 
 　　江牧之嗤之以鼻：“哼，他是因为他是个赤贫户，在为我们干活。要是他自己有家作坊，你看他愿意不愿意？”
 [y003]: /characters/y003 "王洛宾"
+[y004]: /characters/y004 "展无涯"
