--- a/_posts/2011-4-22-3-36900.md
+++ b/_posts/2011-4-22-3-36900.md
@@ -20,7 +20,7 @@ tag: [normal]
 
 　　在临高他们两口子过得很愉快，老婆在执委会当办事员，他自己终于可以正大光明的造枪了——能够在阳光下造枪并且大模大样的和人讨论自己的作品，这种快乐是李一挝过去不曾享受过得。
 
-　　但是李一挝并没有找到多少发挥的机会。穿越者的军火库相当充实，步枪、手枪、霰弹枪一应俱全，暂时还不需要他的自制枪械。大家对他的手艺赞不绝口，但是谁也不想亲手去使用那些不合格的本地钢材制造出来的枪支，至于给土著制造的米尼步枪，那是工业化批量制造的产物，不需要他出什么力——展无涯等人在另一个时空就准备了全套的生产米尼步枪所需的工装设备。
+　　但是李一挝并没有找到多少发挥的机会。穿越者的军火库相当充实，步枪、手枪、霰弹枪一应俱全，暂时还不需要他的自制枪械。大家对他的手艺赞不绝口，但是谁也不想亲手去使用那些不合格的本地钢材制造出来的枪支，至于给土著制造的米尼步枪，那是工业化批量制造的产物，不需要他出什么力——[展无涯][y004]等人在另一个时空就准备了全套的生产米尼步枪所需的工装设备。
 
 　　于是李一挝在机械厂就专门负责轻武器弹药的制造——主要是为SKS步枪的7.62*54mm弹复装子弹——这种子弹在几次战斗中的消耗量很大。李一挝过去经常复装这种子弹，很熟悉而且专门搞了一套小型的专用设备，包括弹头模具和专用压机。
 
@@ -28,7 +28,7 @@ tag: [normal]
 
 　　但是现在的状况不是过去一次复装几发，十几发或者最多百来发，即使是平日里穿越众为了保持对武器的手感而进行的日常射击训练，结束之后拿来的弹壳至少也在二千个以上，这些弹壳要靠他一个个的复装，简直就是苦役。
 
-　　李一挝在展无涯的支持下改进了设备，把原先适合他一个人偷偷摸摸使用的小型装备变成多个工人能够操作的流水线，这样他才有时间和精力来搞他的本业——轻武器制造上。
+　　李一挝在[展无涯][y004]的支持下改进了设备，把原先适合他一个人偷偷摸摸使用的小型装备变成多个工人能够操作的流水线，这样他才有时间和精力来搞他的本业——轻武器制造上。
 
 　　他没有参与德林杰手枪的制造——这种简陋的武器他看不上眼。他把精力放在仿制军用12号口径霰弹枪上了，霰弹枪对子弹的要求很低，用不着金属弹壳。海军和特侦队对这种武器很感兴趣。
 
@@ -81,3 +81,4 @@ tag: [normal]
 　　最后一个问题是13mm子弹，不管是金属弹还是纸壳弹，尺寸和重量都偏大，造出来的手枪尺寸也会随之增加，为了缩小尺寸势必要减少弹仓容量。
 
 　　“照我看来，现在的13mm米尼步枪都嫌口径过大，威力过剩，不过这是既成事实，一时半会改不了。”
+[y004]: /characters/y004 "展无涯"
