--- a/_posts/2011-4-3-3-35000.md
+++ b/_posts/2011-4-3-3-35000.md
@@ -18,7 +18,7 @@ tag: [normal]
 
 　　“要是不报名，说明对这个职务不感兴趣，就算勉强他去干，也不会太尽心。”[文德嗣][y002]说，“有没有能力问题不大，关键是有兴趣，有热情，不懂可以学嘛。”
 
-　　“这样的话落选的人岂不是要有意见？”展无涯说，“小学生当个班长都要你争我夺，何况现在是当官！”他提醒大家，“你们搞这个所谓的干部待遇无差别化，其实没用的！现在是高级干部，将来肯定是大官，现在是个小办事员，将来最多是个一般官员。这点小九九大家谁不明白！”
+　　“这样的话落选的人岂不是要有意见？”[展无涯][y004]说，“小学生当个班长都要你争我夺，何况现在是当官！”他提醒大家，“你们搞这个所谓的干部待遇无差别化，其实没用的！现在是高级干部，将来肯定是大官，现在是个小办事员，将来最多是个一般官员。这点小九九大家谁不明白！”
 
 　　“用招聘资格来限制。”马甲说，“很多职务不可避免的要求一定的专业技能，没有专业技能就不能担任，这是很简单的原则吧，大家也无话可说。”
 
@@ -26,7 +26,7 @@ tag: [normal]
 
 　　“我看可以搞公务员考试……”程栋继续出谋划策。
 
-　　“算了吧，你这主意一出来就会被人砍，”展无涯说，“还考得不够吗？”
+　　“算了吧，你这主意一出来就会被人砍，”[展无涯][y004]说，“还考得不够吗？”
 
 　　[萧子山][y001]咳嗽了一声：“到底需要什么技能或者条件，不是招聘部门说了算嘛……”
 
@@ -79,3 +79,4 @@ tag: [normal]
 　　至于仲裁庭的机构组织，马甲按照大家提交的建议搞了一个方案：新成立三个专业法庭：民事法庭、刑事法庭和治安法庭——马甲认为现在警察直接掌握治安处罚权从长远来看是有弊端的，所以他仿效欧美某些国家的制度专设一个快速审理轻微案件的治安法庭，将原有的海事法院改组为海事－商事法庭，另增设公证处和专门用来收容闲散法学俱乐部人员的“法律顾问办公室”。
 [y001]: /characters/y001 "萧子山"
 [y002]: /characters/y002 "文德嗣"
+[y004]: /characters/y004 "展无涯"
