--- a/_posts/2011-5-12-4-00700.md
+++ b/_posts/2011-5-12-4-00700.md
@@ -10,7 +10,7 @@ tag: [normal]
 
 　　蒸汽机的广泛运用的一个结果就是对煤炭的需量激增。以至于海军很快就得专门安排三条运输船负责运输煤炭。
 
-　　最好的动力煤自然是鸿基的无烟煤，但是鸿基煤供应时断时续，临高主要供应的还是南宝地区的劣质褐煤和泥炭，也杂有从广东运来的褐煤。三亚开发对煤炭的需求量使得临高的煤炭储量陡然下降，展无涯不得不发出警告：就算停止农业肥料的制造，全部褐煤和泥炭都转到动力用和化工上，库存也支撑不到一周了。
+　　最好的动力煤自然是鸿基的无烟煤，但是鸿基煤供应时断时续，临高主要供应的还是南宝地区的劣质褐煤和泥炭，也杂有从广东运来的褐煤。三亚开发对煤炭的需求量使得临高的煤炭储量陡然下降，[展无涯][y004]不得不发出警告：就算停止农业肥料的制造，全部褐煤和泥炭都转到动力用和化工上，库存也支撑不到一周了。
 
 　　费了大力气开采的甲子煤矿供应的是炼焦用褐煤，大家是不舍得烧得——好不容易才积攒起这点东西来。焦煤在南方是非常紧缺的资源。
 
@@ -103,3 +103,4 @@ tag: [normal]
 　　那个失手丢下炸药的爆破工被附近警戒的士兵抓了起来，垂头丧气的从山坡上下来了。
 
 　　潘达制止了要把这倒霉蛋送交指挥部处置的爆破队长：“算了，他是一时失误，不过装炸药的事情就不要让他干了，先干点力气活，晚上开会搞安全教育。”
+[y004]: /characters/y004 "展无涯"
