--- a/_posts/2011-5-19-4-01400.md
+++ b/_posts/2011-5-19-4-01400.md
@@ -72,7 +72,7 @@ tag: [normal]
 
 　　企划院的要求是三亚除了日常用煤之外，至少要保证有十五天的煤炭储备。蒸汽机和锅炉对穿越集团的重要性已经上升到“依赖”的程度上。
 
-　　唯一的问题是锅炉的质量还是堪忧，突击制造的大批蒸汽机和锅炉故障率很高，一度影响到工程进度。在他的要求下，展无涯专门派出了一个全部由元老组成的特别维修队，对工程使用的所有锅炉和蒸汽机进行了一次大检修。
+　　唯一的问题是锅炉的质量还是堪忧，突击制造的大批蒸汽机和锅炉故障率很高，一度影响到工程进度。在他的要求下，[展无涯][y004]专门派出了一个全部由元老组成的特别维修队，对工程使用的所有锅炉和蒸汽机进行了一次大检修。
 
 　　潘达带领爆破队在各处不间断的连续爆破，整个榆林地区炮声隆隆，劳工和移民们知道这是在搞爆破，但是对原先安游乐市的人来说，炮声突然增加了他们的惊扰不安。以为这伙“澳洲海贼”不知道在和哪路人马开仗。
 
@@ -132,3 +132,4 @@ tag: [normal]
 
 　　原先安游乐市的寨丁，在本地有家眷的编成劳工队，单身汉被运回临高去补充劳动力。至于胡逊的同宗、亲戚一个不留全部被送往临高安置。
 [y003]: /characters/y003 "王洛宾"
+[y004]: /characters/y004 "展无涯"
