--- a/_posts/2011-5-27-4-02200.md
+++ b/_posts/2011-5-27-4-02200.md
@@ -8,7 +8,7 @@ tag: [normal]
 
 　　说到这里，执委会诸人有点明白了。
 
-　　“什么脏活？”展无涯问。
+　　“什么脏活？”[展无涯][y004]问。
 
 　　“英国人的老本行吧。”马甲说，“我是不赞成的，费效比不高。”
 
@@ -16,7 +16,7 @@ tag: [normal]
 
 　　“不是贩毒，是贩奴。英国人这会干得正欢的事情。”邬德说。
 
-　　“要引进黑叔叔？”展无涯大摇头，“我可不想以后中华大地上闹出一个阿非利加族来。黑叔叔的种族特点太明显了！几代人之后都很难被归化。非要用奴隶我宁可要日本和高丽的，起码以后他们会很容易被同化掉。”
+　　“要引进黑叔叔？”[展无涯][y004]大摇头，“我可不想以后中华大地上闹出一个阿非利加族来。黑叔叔的种族特点太明显了！几代人之后都很难被归化。非要用奴隶我宁可要日本和高丽的，起码以后他们会很容易被同化掉。”
 
 　　“谁说要黑叔叔了。”邬德说，“是东南亚的土人。”
 
@@ -157,3 +157,4 @@ tag: [normal]
 　　刘三徒步和他一起往县城而去，路上不时考问他书上的知识，有时候还会停下了要他辨认路上的植物。这对符悟本来说已经不是难事。他平日里除了背药书种药就是按照刘三的吩咐到临高各处采药，除了锻炼识别药物的能力之外，刘三还希望藉此来逐步掌握整个临高的中草药分布状况。
 [y002]: /characters/y002 "文德嗣"
 [y003]: /characters/y003 "王洛宾"
+[y004]: /characters/y004 "展无涯"
