--- a/_posts/2011-6-2-4-02800.md
+++ b/_posts/2011-6-2-4-02800.md
@@ -130,7 +130,7 @@ tag: [normal]
 
 　　“搞来料加工如何？一门炮要李洛由出多少铜，多少铁，多少煤炭，而且要超额的给……”
 
-　　“意义不大。”展无涯说：“大家别忘记造炮还要消耗工人的工时和机械损耗。这都是成本。”
+　　“意义不大。”[展无涯][y004]说：“大家别忘记造炮还要消耗工人的工时和机械损耗。这都是成本。”
 
 　　于是出口武器的事情就给否决了，有人提议出口临高产的30式左轮枪，这种枪无论消耗的金属还是工时都非常少，而且弹药上不管是大明还是后金都搞不定，要用就得向临高购买，很容易从弹药上卡死对方。
 
@@ -162,10 +162,11 @@ tag: [normal]
 
 　　“卖炮卖军火消耗资源，卖机器设备也要消耗资源吧。”
 
-　　“倒是可以卖服务，就我们制造零件的质量水平，李洛由看到维修保养费账单恐怕要疯了。”展无涯说。
+　　“倒是可以卖服务，就我们制造零件的质量水平，李洛由看到维修保养费账单恐怕要疯了。”[展无涯][y004]说。
 
 　　“不能单纯从赚钱上去考虑。至于消耗资源我们应该这么看。卖大炮给崇祯那是净消耗，卖机器是一种造血，”邬德说，“我们不能永远靠自己生产一切不是？这很不经济。迟早要把一些生产领域开放给民间的。既然开放给民间，当然不希望他们继续沿用传统的手工方式来制造，否则我们的装备制造业就永远也发展不起来——缺少足够的订货。”
 
 　　只要见识过穿越众的工厂的，无不为工业化的生产效率所折服。杨世祥已经在跃跃欲试把药厂改成机械化，但是临高本地的经济力量太过薄弱，有资金投资工业的人寥寥无几。工业又要占用大量的人口。本来劳动力就偏紧缺，再增加民营工业的需求，人口瓶颈就愈发突出了。
 
 　　如果近在咫尺的即有大量资金又有许多人口的珠江三角洲也加入到这个工业化进程来，临高的装备制造业就能得到极大的发展。而且会形成对临高工业的依赖性。机器设备的供应、维护和升级都要依赖临高的工业。
+[y004]: /characters/y004 "展无涯"
