--- a/_posts/2011-6-21-4-04700.md
+++ b/_posts/2011-6-21-4-04700.md
@@ -74,7 +74,7 @@ tag: [normal]
 
 　　“好吧，好吧，是我们的错。”邬德无奈的说，“关键你要得这东西太奇怪，大麻纤维我还有库存。籽粒从来就没人想过。”
 
-　　解决了油墨问题，周洞天去机械厂直接找到了展无涯。要他把上一次制造中文打字机时候参与的人员都召集起来——这批人上次就制造过打字盘上的铅字，算是有经验的了。
+　　解决了油墨问题，周洞天去机械厂直接找到了[展无涯][y004]。要他把上一次制造中文打字机时候参与的人员都召集起来——这批人上次就制造过打字盘上的铅字，算是有经验的了。
 
 　　铅字需要大批量的制造，最简单最廉价的批量制造方法当然是铸造。具体做法是用硬质的金属，比如钢，由雕刻工雕出一个反向凸字来——阳模，然后用阳模在软质的黄铜上冲压出阴模。再将铅水注入阴模铸造成字。
 
@@ -133,3 +133,4 @@ tag: [normal]
 　　周洞天继续他的部门旅行和公文申请，他找到了殖民及贸易部，递上了关于前往巴达维亚招募荷兰印刷工人的文件。文件中强调，不管是强迫也好，自愿也好，反正能把人给搞来就好。设备一起弄来最佳。
 
 　　司凯德正在组织前往东南亚考察的贸易考察队。周洞天的要求是顺带的事情，当下满口答应。表示只要当地有，自己千方百计也会把人给搞来。
+[y004]: /characters/y004 "展无涯"
