--- a/_posts/2011-6-3-4-02900.md
+++ b/_posts/2011-6-3-4-02900.md
@@ -14,7 +14,7 @@ tag: [normal]
 
 　　“不过大明的人能把炮厂和生产力联系起来吗？他们看了之后最多人为：这座澳洲炮厂很强大，但是也仅此而已。不会和织布纺纱之类的民用工业联系起来。”
 
-　　“嗯，我也觉得怀疑，”展无涯说，“现代人生活在工业社会里，有起码的工业常识。古人的话，一般商人恐怕没有这个联系能力。”
+　　“嗯，我也觉得怀疑，”[展无涯][y004]说，“现代人生活在工业社会里，有起码的工业常识。古人的话，一般商人恐怕没有这个联系能力。”
 
 　　“大概铸造场会意识到。比如机械化的鼓风机。”
 
@@ -150,3 +150,4 @@ tag: [normal]
 
 　　刘三对他的所有问题都是一问三不知，李洛由以为他存心要保密，只好不再追问，其实刘三不是学工出身，倒并非要保密。
 [y002]: /characters/y002 "文德嗣"
+[y004]: /characters/y004 "展无涯"
