--- a/_posts/2011-6-4-4-03000.md
+++ b/_posts/2011-6-4-4-03000.md
@@ -180,7 +180,7 @@ tag: [normal]
 
 　　水力机配合变速箱，发出的动力能够驱动比人力鼓风大得多的风箱，一次为多个化铁炉提供氧气，而火炮镗床也可以由水力发动来
 
-　　“制造这套东西，有一周就可以了。”展无涯看了一会宣布。
+　　“制造这套东西，有一周就可以了。”[展无涯][y004]看了一会宣布。
 
 　　“我觉得挺无聊的，虽然耗费资源和工时不多，但是总觉得造得莫名其妙。”萧贵评论，“还不如直接卖炮卖火绳枪给那李老板来得痛快，起码还能让徒工练练手。”
 
@@ -188,7 +188,8 @@ tag: [normal]
 
 　　“啥叫穿奸？”
 
-　　“别瞎掰！我觉得邬德卖设备也不错，”展无涯说，“搞个工业样板，让那边的有钱人看到用机器生产能提高效率，有钱赚。大家一起来搞，起码让广东能慢慢的建立起原始的初级工业。这样可以进口初级制成品，不是总买原料自己加工了。再说几台简单的设备就能赚钱几万两，这个生意做得！”
+　　“别瞎掰！我觉得邬德卖设备也不错，”[展无涯][y004]说，“搞个工业样板，让那边的有钱人看到用机器生产能提高效率，有钱赚。大家一起来搞，起码让广东能慢慢的建立起原始的初级工业。这样可以进口初级制成品，不是总买原料自己加工了。再说几台简单的设备就能赚钱几万两，这个生意做得！”
 
 　　【注：英国设备是不是制这点钱，不知道，随便写得。匠师的工资参照明末雇用葡萄牙军人操作教练火器的工资。当时最高的是每年一百二十两，伙食费每月十两。】
 [y002]: /characters/y002 "文德嗣"
+[y004]: /characters/y004 "展无涯"
