--- a/_posts/2011-6-5-4-03100.md
+++ b/_posts/2011-6-5-4-03100.md
@@ -30,7 +30,7 @@ tag: [normal]
 
 　　“是刘三说得。正式通知应该很快会来。”
 
-　　几分钟之后，机械厂的电话响了起来，制造总监办公室的秘书通知展无涯，刚才企划院办公室的秘书初雨已经正式通知取消了简易炮厂的设备订单。
+　　几分钟之后，机械厂的电话响了起来，制造总监办公室的秘书通知[展无涯][y004]，刚才企划院办公室的秘书初雨已经正式通知取消了简易炮厂的设备订单。
 
 　　政治保卫总局里灯火通明——这座院子即使在午夜时分也亮着灯。秘密警察们——不管在哪一个时空——都习惯在夜间工作。院子里传来电话铃声，说话声和中文打字机沉重的敲打声。
 
@@ -163,3 +163,4 @@ tag: [normal]
 　　倒是白司铎还有点样子。李洛由对澳洲人能允许教会在这里修建教堂大有好感，听说这里还成立了修道院更是吃惊不小，这样看来澳洲人对天主很有崇敬之心。
 
 　　教堂不大，尖尖的屋顶，一座小型的钟楼，墙壁上开着长长的玻璃长窗。建筑简洁美观，李洛由对这教堂很有好感，当即捐赠了相当于一百两的流通券。吴石芒表示感谢，回赠他一本中文版的《教义问答》，这是天主教徒入门之书，书印得极精美，又有漂亮的装帧。让李洛由大为激赏，当即又捐赠了一百两银子作为印刷此书之用。并且表示愿意采购五百本。
+[y004]: /characters/y004 "展无涯"
