--- a/_posts/2011-6-8-4-03400.md
+++ b/_posts/2011-6-8-4-03400.md
@@ -84,7 +84,7 @@ tag: [normal]
 
 　　“关于这点我有觉悟的。”裔凡继续保持放水的姿势，小声说，“好歹执委有九个不是。”
 
-　　“悬得很。”陈策表示担忧，“你不要忘记，[文总][y002]你别看他过去是个自由派，还是个小资本家，其实本质上也是个计划经济分子。他是个标准化主义分子——从这个角度来看，他的统制欲比督公强多了。至于展无涯，地地道道的工程师，他肯定会站在[文总][y002]一边。马甲是个滑头，而且这事情和他不相干，他没必要跳出来。其他人也差不多的态度，打酱油为主。”
+　　“悬得很。”陈策表示担忧，“你不要忘记，[文总][y002]你别看他过去是个自由派，还是个小资本家，其实本质上也是个计划经济分子。他是个标准化主义分子——从这个角度来看，他的统制欲比督公强多了。至于[展无涯][y004]，地地道道的工程师，他肯定会站在[文总][y002]一边。马甲是个滑头，而且这事情和他不相干，他没必要跳出来。其他人也差不多的态度，打酱油为主。”
 
 　　“元老院的常委会呢？执委会又不是一手遮天。”
 
@@ -132,3 +132,4 @@ tag: [normal]
 
 　　具体措施就是：所有穿越集团控制的临高零售批发渠道，在过渡期之后全部使用流通券计价，不再接受白银和铜钱；在过渡期内，各家店铺设置兑换柜台，收入白银铜钱兑出流通券；过渡期执行双重标价，对白银和铜钱采用贬值标价，促使消费者使用流通券……
 [y002]: /characters/y002 "文德嗣"
+[y004]: /characters/y004 "展无涯"
