--- a/_posts/2011-7-2-4-05800.md
+++ b/_posts/2011-7-2-4-05800.md
@@ -64,7 +64,7 @@ tag: [normal]
 
 　　幸亏他离开了，否则下一个场景更要让魏爱文大发雷霆了。
 
-　　这时候吴南海提交了一份他和展无涯一起递交的议案，议案的内容就是要求陆海军在和明军作战的时候必须让他们登上海南岛之后再一举歼灭。而且要“尽量多抓俘虏”。
+　　这时候吴南海提交了一份他和[展无涯][y004]一起递交的议案，议案的内容就是要求陆海军在和明军作战的时候必须让他们登上海南岛之后再一举歼灭。而且要“尽量多抓俘虏”。
 
 　　于是有人便提出了防守反击的思路。具体说来，就是让明军登岛之后从容集结完毕，然后再选定预设阵地设防，进行会战。
 
@@ -152,3 +152,4 @@ tag: [normal]
 
 　　“至于将来，我们叫什么都可以。银河帝国、银河共和国、星际联邦、星汉帝国、……随便叫。现在我们就用澳宋好了。用大宋的名义那帮腐儒总不能攻击我们是蛮夷了——我们不但是华夏苗裔，还是赵宋后裔，比朱明要正统得多了。”邬德说。
 [y002]: /characters/y002 "文德嗣"
+[y004]: /characters/y004 "展无涯"
