--- a/_posts/2011-7-6-4-06200.md
+++ b/_posts/2011-7-6-4-06200.md
@@ -58,7 +58,7 @@ tag: [normal]
 
 　　“批量制造的时候也能这么漂亮就好了。这是消耗品。一个步兵配两个，就得八千个。”
 
-　　“展无涯正在考虑怎么设计弹壳铸造的生产线呢，到时候一个月产一万个弹壳不成问题。”
+　　“[展无涯][y004]正在考虑怎么设计弹壳铸造的生产线呢，到时候一个月产一万个弹壳不成问题。”
 
 　　“现在我来装填弹体，你们仔细看。”林深河对在场的武器设计和工业口的人员说，“我在美国装填过老式的黑火药炮弹……”
 
@@ -155,3 +155,4 @@ tag: [normal]
 　　改进材料之后的炮架即使加上了方向机整个火炮的全重也被控制在半吨之内了。
 
 　　安装了全新炮架的12磅加农炮随即进行了靶场测试——证明方向机的作用是有效的，但是方向机缺少方向锁定装置，射击的时候身管会在后坐力下产生偏移。随后又进行了50公里行军测试。新炮架无论在灵活性还是牵引性能上都比旧式炮架表现要好，但是劣质滚珠轴承造成了好几次中途修理。
+[y004]: /characters/y004 "展无涯"
