--- a/_posts/2011-7-7-4-06300.md
+++ b/_posts/2011-7-7-4-06300.md
@@ -42,11 +42,11 @@ tag: [normal]
 
 　　引信的三视图画出来之后，他把图纸交给了机械部门。
 
-　　“这东西制造要有一定的精度，我得找元老做。”展无涯看了之后说，“黄铜的？”
+　　“这东西制造要有一定的精度，我得找元老做。”[展无涯][y004]看了之后说，“黄铜的？”
 
 　　“对。”
 
-　　“个头还算小，黄铜的也消耗不了多少。”展无涯看了看尺寸，“先做一千个怎么样？”
+　　“个头还算小，黄铜的也消耗不了多少。”[展无涯][y004]看了看尺寸，“先做一千个怎么样？”
 
 　　“没问题，我想张柏林的炮手是没机会发射一千发榴弹和榴霰弹的。”
 
@@ -120,13 +120,14 @@ tag: [normal]
 
 　　邬德立刻批准了这项造船案，至于杆雷艇是不是那么有用，在他看来不是大问题——没用的话大不了拆掉装甲当交通艇，反正不浪费。
 
-　　展无涯得到了何鸣的明确指令，要求在所有工厂内组织民兵。每天抽一小时进行军事训练。
+　　[展无涯][y004]得到了何鸣的明确指令，要求在所有工厂内组织民兵。每天抽一小时进行军事训练。
 
 　　“用长矛进行军事训练？”
 
 　　“先用长矛连刺杀和队列技术。操枪可以用教练枪先顶着。还有投弹——海林那边已经移交了几百个教练弹过来。你拿一百个去给工人们训练。”何鸣说，“我已经向企划院提交了申请，要求紧急扩大步枪产量，到时候大家就都有步枪了——你要从工人民兵中挑选出政治可靠最为坚决的分子作为基干民兵，准备随时调用。”
 
-　　“怎么？要拉工人去打仗。”展无涯大吃一惊，好不容易培养出来的产业工人，哪怕死掉一个都亏大了。
+　　“怎么？要拉工人去打仗。”[展无涯][y004]大吃一惊，好不容易培养出来的产业工人，哪怕死掉一个都亏大了。
 
 　　“是让他们充当预备队和卫戍部队。不会调动他们出击打仗的。”何鸣解释说，“除了工厂之外。公社和当地的村寨也要进行动员。不过工人自卫队将会是主力。”
 [y002]: /characters/y002 "文德嗣"
+[y004]: /characters/y004 "展无涯"
