--- a/_posts/2011-8-21-4-10800.md
+++ b/_posts/2011-8-21-4-10800.md
@@ -126,7 +126,7 @@ tag: [normal]
 
 　　慰问团的成员们乘坐的农用车离得远远得就停了下来，在场地上官兵们看到一群人向这里走来。
 
-　　何鸣知道，来的是执委会主席[文德嗣][y002]，中央政务院总理马千瞩，制造总监展无涯和一群人民委员和部长们。整个慰问团的级别非常之高。
+　　何鸣知道，来的是执委会主席[文德嗣][y002]，中央政务院总理马千瞩，制造总监[展无涯][y004]和一群人民委员和部长们。整个慰问团的级别非常之高。
 
 　　他看到[文德嗣][y002]等人已经到了离开第一个方阵不到十米的检阅台，他立刻迎了上去。这时候，东门吹雨在他身后发出“立正！”的口令声。
 
@@ -177,3 +177,4 @@ tag: [normal]
 　　“你们获得了元老院和人民授予你们的军旗，你们无愧于军旗的荣誉和使命。”
 [y002]: /characters/y002 "文德嗣"
 [y003]: /characters/y003 "王洛宾"
+[y004]: /characters/y004 "展无涯"
