--- a/_posts/2011-8-22-4-10900.md
+++ b/_posts/2011-8-22-4-10900.md
@@ -26,7 +26,7 @@ tag: [normal]
 
 　　桌子的中间是一个个长方形的木盘子，里面装满了碎冰，上面排满了各种生鱼片。
 
-　　“全是海里找的东西，”展无涯叹了一口气，“我总觉得我们在饮食习惯上在向日本人靠拢。”说着他取了四五片生鱼片。
+　　“全是海里找的东西，”[展无涯][y004]叹了一口气，“我总觉得我们在饮食习惯上在向日本人靠拢。”说着他取了四五片生鱼片。
 
 　　马袅这里的渔业相当的发达，农业委员会在这里设立了第二个渔业收购和加工厂，利用这里的盐处理海产品。最近这里又修了一所大型煤气冷库专门用来储存生鲜海产品，供应非常充分。
 
@@ -58,7 +58,7 @@ tag: [normal]
 
 　　“庆祝我们伟大政权胜利的盛大阅兵结束之后，慰问团一行在马袅基地的食堂内用了简单的午餐。”
 
-　　午餐的材料全部是马袅的伏波军干部战士用自己的双手生产出来的。[文德嗣][y002]、马千瞩、[王洛宾][y003]、展无涯等领导同志们一边享用着简朴的午餐，一边赞叹着伏波军贯彻元老院“开战生产运动，减轻人民负担”光辉指示，亲手生产出来的食品的美味。
+　　午餐的材料全部是马袅的伏波军干部战士用自己的双手生产出来的。[文德嗣][y002]、马千瞩、[王洛宾][y003]、[展无涯][y004]等领导同志们一边享用着简朴的午餐，一边赞叹着伏波军贯彻元老院“开战生产运动，减轻人民负担”光辉指示，亲手生产出来的食品的美味。
 
 　　就餐途中，[文主席][y002]关怀的问起伏波军伤员的情况。
 
@@ -106,7 +106,7 @@ tag: [normal]
 
 　　马袅陆海军医院的每个房间里都洋溢着元老们对人民的热爱和无微不至的关怀。
 
-　　担任制造总监的展无涯同志立刻表示：回去之后就对病床进行改进，增加可以调节的机构，让每一个伤病员都能在最舒畅的环境中愉快的康复。
+　　担任制造总监的[展无涯][y004]同志立刻表示：回去之后就对病床进行改进，增加可以调节的机构，让每一个伤病员都能在最舒畅的环境中愉快的康复。
 
 　　“事情虽然小，但是我们的战士都是政权的瑰宝，一时半会也不能忽视。”他这样说道。
 
@@ -182,7 +182,7 @@ tag: [normal]
 
 　　“枪管和机件寿命不够，标称枪管寿命200发，实际发射100发之后膛线就烧蚀严重。如果不带了许多备用枪的话，恐怕就要用刺刀战斗了。”
 
-　　展无涯在笔记本上边记录边说：“机械加工水平过剩，但是材料还是不过关。”
+　　[展无涯][y004]在笔记本上边记录边说：“机械加工水平过剩，但是材料还是不过关。”
 
 　　“黑火药手榴弹的威力不够。”
 
@@ -209,3 +209,4 @@ tag: [normal]
 　　即使喝的不过是格瓦斯而已，但是放量畅饮也能使人微醺。整个马袅基地沉浸在欢乐的海洋里。
 [y002]: /characters/y002 "文德嗣"
 [y003]: /characters/y003 "王洛宾"
+[y004]: /characters/y004 "展无涯"
