--- a/_posts/2012-1-17-5-02000.md
+++ b/_posts/2012-1-17-5-02000.md
@@ -26,7 +26,7 @@ tag: [normal]
 
 　　在道路的尽头又是一堵高高的围墙，有哨塔拱卫的大门紧闭。行人出入只走旁边的小门，只有运送大件货物的马车或者轨道车到来的时候才会打开大门，每到这个时候，值班的哨兵就会荷枪实弹的警戒着四周，不许任何无关人员进入。
 
-　　戒备森严的大门之后，是元老院仅有的四套联合加工中心中的二套，被安装在精心修筑的专门车间里。另一套安装在高山岭地区的秘密车间里，还有一套被封存了起来。联合加工中心所能达到的加工高精度是临高目前所有设备加在一起也达不到的，专门用来制造许多需要高精度加工的模具和特殊零件。动用联合加工中心需要展无涯和企划院的邬德二人的签字。
+　　戒备森严的大门之后，是元老院仅有的四套联合加工中心中的二套，被安装在精心修筑的专门车间里。另一套安装在高山岭地区的秘密车间里，还有一套被封存了起来。联合加工中心所能达到的加工高精度是临高目前所有设备加在一起也达不到的，专门用来制造许多需要高精度加工的模具和特殊零件。动用联合加工中心需要[展无涯][y004]和企划院的邬德二人的签字。
 
 　　被严密保护的加工中心大院里还有一座企划院直辖仓库。为了便于制造部门就近取用，企划院在这里设置了一座管制品仓库，专门储存从旧时空带来的物资：各种标号的特殊钢、有色金属、标准件和工具、量具。
 
@@ -38,13 +38,13 @@ tag: [normal]
 
 　　原理虽然很简单，挂链却是一个极大的技术难题，属于高强度的高强度圆环链。34个翻斗在挂链上，每个翻斗还要承载数吨的铁矿石，对挂链的负荷有很高的要求，牵扯到材料、热处理和机械加工多方面。
 
-　　现在，试验用的木翻斗已经全部挂了上去，用沙袋和铁锭加满了工作负荷。展无涯和机械厂的一些骨干元老们都在翘首观望着。
+　　现在，试验用的木翻斗已经全部挂了上去，用沙袋和铁锭加满了工作负荷。[展无涯][y004]和机械厂的一些骨干元老们都在翘首观望着。
 
-　　展无涯看到人来得差不多了，向工人们挥挥手说：“大家往后撤，马上开始！”
+　　[展无涯][y004]看到人来得差不多了，向工人们挥挥手说：“大家往后撤，马上开始！”
 
-　　工人听到展无涯下令，马上打开传动开关，锅驼机通过变速箱输出功率，随后卷扬机开始转动。链条被绷紧了，一排挂斗晃悠悠地开始运动，轰隆轰隆地往上升，越升越高，刹那间就到三分之二的高度。
+　　工人听到[展无涯][y004]下令，马上打开传动开关，锅驼机通过变速箱输出功率，随后卷扬机开始转动。链条被绷紧了，一排挂斗晃悠悠地开始运动，轰隆轰隆地往上升，越升越高，刹那间就到三分之二的高度。
 
-　　展无涯、蒋宏军、梁信、孙立等一干机械口的元老和所有在场的工人都出神地望着，翻斗晃晃悠悠地越升越高，心理越高兴。链条虽小，却是工业设备领域内的必需品，现在临高自产的挂链，无论在负荷量还是耐久性上都显得非常不足，这次不管是材料还是加工手段都做了大幅度的改进，如果能制造成功就解决了工业化的一个大问题。
+　　[展无涯][y004]、蒋宏军、梁信、孙立等一干机械口的元老和所有在场的工人都出神地望着，翻斗晃晃悠悠地越升越高，心理越高兴。链条虽小，却是工业设备领域内的必需品，现在临高自产的挂链，无论在负荷量还是耐久性上都显得非常不足，这次不管是材料还是加工手段都做了大幅度的改进，如果能制造成功就解决了工业化的一个大问题。
 
 　　众人望着望着，忽然咔嚓一声，链条断了。
 
@@ -52,14 +52,15 @@ tag: [normal]
 
 　　孙立摸了下头上的安全帽：“负荷能力还是不足啊。”
 
-　　“要做金相学分析，”展无涯说，“看看到底是材料问题还是加工的问题。”
+　　“要做金相学分析，”[展无涯][y004]说，“看看到底是材料问题还是加工的问题。”
 
 　　当下大家把链条抬了回去，放在锻造车间里。机械总厂的锻造车间规模和兵工厂不相上下，当然大型蒸汽锻机是D日之后自制的。
 
-　　“大家晚上来搞下分析吧。”展无涯对满脸失望的机械口元老们说，“有人晚上要和女仆过性生活不？有这个计划的可以不来。”
+　　“大家晚上来搞下分析吧。”[展无涯][y004]对满脸失望的机械口元老们说，“有人晚上要和女仆过性生活不？有这个计划的可以不来。”
 
 　　几个哄笑起来，孙立说：“女仆放着总在那儿，想要随时用，早用晚用一个样。我肯定来。”
 
 　　其他几个人也表示会来。机械厂是元老最为密集的地方，许多机床上的操作工就是元老本人，特别是在车床、钳工和联合加工中心上，主力依然是技术工人出身的元老。他们不但自己要操作设备，还要承担教授徒弟的任务，工作非常的繁忙。许多人从机械厂草创开始就是住在厂子里的，现在有不少人还是睡在自己的办公室。对很多人来说工作就是他们的娱乐。
 
-　　展无涯也住在厂子里，他对机械总厂的感情尤其深厚——这个机械总厂最早的底子就是当初他在广州郊区开得小机械加工厂。他平日里就睡在厂里的一间宿舍里——和过去当小老板的时候一个样。
+　　[展无涯][y004]也住在厂子里，他对机械总厂的感情尤其深厚——这个机械总厂最早的底子就是当初他在广州郊区开得小机械加工厂。他平日里就睡在厂里的一间宿舍里——和过去当小老板的时候一个样。
+[y004]: /characters/y004 "展无涯"
