--- a/_posts/2012-1-26-5-02900.md
+++ b/_posts/2012-1-26-5-02900.md
@@ -26,7 +26,7 @@ tag: [normal]
 
 　　高炉不但容量大而且是连续生产，大型高炉的炉喉部的温度极高，不能使用人工加料，而是机械式的自动加料。高炉加料的方式好几种，姜野和季无声商量下来决定采用机械结构中最为简单的装料桶装料法。装料桶是钟形的，将料斗运到炉顶，然后将装料桶升至炉顶上，卡住炉顶，然后炉料从可开启的桶底部漏到炉喉里去。料斗是通过曲柄连杆机构在轨道上滑动带动料桶的。这套系统虽然不复杂，却要求工业系统在链条、机械传动和动力机械方面提供可靠的装备。
 
-　　姜野说：“当初展无涯说不上高炉只搞转炉，从广东进口生铁炼钢。我还觉得他有点右倾保守主义——现在看来当时就算想搞高炉也未必能成。”
+　　姜野说：“当初[展无涯][y004]说不上高炉只搞转炉，从广东进口生铁炼钢。我还觉得他有点右倾保守主义——现在看来当时就算想搞高炉也未必能成。”
 
 　　“当时要搞也就能上三五米高的土高炉。一昼夜出个二三吨生铁，顶天就是五吨。加料多半还是用绞车把炉料绞上去，再由工人一铲子一铲子往炉喉里加——工人被烤得半死不说，加料慢，落料还不匀。效率差得和现在的小化工厂一样。”季无声对化工系统的本家很同情。他的这位本家的工业规模按照旧时空的标准连70年代的县级化工厂都够不上，很多产品还是实验室级别的制造。要不是从旧时空运来的煤焦化联合生产厂还能壮壮场面，光那个800吨合成氨和电解食盐车间的可怜产量就使得他在每次企划院会议上咆哮。
 
@@ -57,3 +57,4 @@ tag: [normal]
 　　煤炭加入发生炉之后点火进行干馏，与从炉底加入的空气发声反应，即产生煤气。但是这时候的煤气热值偏低，作为平炉燃料热值偏低，所以在炼焦的同时将锅炉蒸发器制取的水蒸汽按比例混合空气之后鼓入发生炉中，制取出半水煤气，半水煤气的热值较之于空气煤气要高不少，可以作为平炉使用的燃料。
 
 　　干馏时产生的焦油经储存专门的焦油槽内，再运往博铺的煤焦联合厂进行进一步提炼。季退思准备以后再在马袅煤气厂配套一个焦油处理厂，就地处理煤焦油生产化工产品。
+[y004]: /characters/y004 "展无涯"
