--- a/_posts/2012-3-7-5-07000.md
+++ b/_posts/2012-3-7-5-07000.md
@@ -16,7 +16,7 @@ tag: [normal]
 
 　　司凯德对这个项目极其支持：“但是这个项目一旦启动，收益是很客观的。最重要的是我们将摆脱目前极度依赖临高工业的状况，在广东就地加工原材料，就地雇佣劳动力，就地销售。”
 
-　　“既然我们原本就准备在香港和广东开设轻工业生产企业，就近利用广东的人力物力，搞一个大规模销售商品的基地也不能算是浪费。”展无涯从工业角度对此也表示赞成。
+　　“既然我们原本就准备在香港和广东开设轻工业生产企业，就近利用广东的人力物力，搞一个大规模销售商品的基地也不能算是浪费。”[展无涯][y004]从工业角度对此也表示赞成。
 
 　　“至于建设需要的财力物力，我认为可以从广州当地动脑筋。不要一味走全额拨款的道路。”李梅再次祭起了她的股份化的思路。
 
@@ -83,3 +83,4 @@ tag: [normal]
 　　“这叫此一时彼一时。再说髡贼也好，东主也好，和我们小百姓也没多大关系。不过他一回来，几家紫字号就都能开了，澳洲货又有地方买了。”
 
 　　郭逸坐在轿中，想到大半年前广州站仓皇逃走的窘境，真是恍若隔世一般。广州，还是他大有可为的天地。
+[y004]: /characters/y004 "展无涯"
