--- a/_posts/2012-5-23-5-14700.md
+++ b/_posts/2012-5-23-5-14700.md
@@ -52,7 +52,7 @@ tag: [normal]
 
 　　粗磨之后接下来要用更细的磨料进行细磨。原本的磨料膏粉已经被徒弟清理干净了，新的磨料添加进去。林汉隆更小心了，每一批磨料都让徒弟反复筛过，确保没有太粗的颗粒混在里面。磨过一会他就要停工，拿出工件放在划尺上测量一番。有时候他还直接动手，用粗毛毡沾上磨料把不平整的地方手工修饰一番。
 
-　　就这样用了一周的时间，把八片毛胚精磨到划尺测量的极限。钟博士又一次跑来参观，这次他还带来了展无涯。展无涯对他的产品赞不绝口，看到他如此的认真就劝他：只是老花镜而已，在旧时空批量生产可以直接铸造，何必那么精确？林汉隆回答说是为了将来制造更好的光学仪器积累经验。展无涯摇摇头，也没有再说什么。
+　　就这样用了一周的时间，把八片毛胚精磨到划尺测量的极限。钟博士又一次跑来参观，这次他还带来了[展无涯][y004]。[展无涯][y004]对他的产品赞不绝口，看到他如此的认真就劝他：只是老花镜而已，在旧时空批量生产可以直接铸造，何必那么精确？林汉隆回答说是为了将来制造更好的光学仪器积累经验。[展无涯][y004]摇摇头，也没有再说什么。
 
 　　精磨完毕的工件只剩抛光一道工序，然而林汉隆却犯了愁。光学工业上常用的抛光粉是颗粒非常细的金属氧化物，临高能拿出来的金属材料只有铁。冶金部门表示他们能够制造氧化铁，但是制成粉末他们就不会了。机械厂制造过若干台球磨机，用在水泥、陶瓷等工业上。但是尺寸都比较大。林汉隆只好把氧化铁原料送到萧白朗那里磨制，但是出来的氧化铁颗粒够细腻的实在不多。无奈之下只好用粗毛毡沾上有限的一点氧化铁粉末来抛光。
 
@@ -131,3 +131,4 @@ tag: [normal]
 　　车间里没有几个人。光线从靠近屋顶的成排窗户上投射下来。看上去还算明亮。车间里很安静——光学厂现在还没有正式运转，基本上是按照林汉隆的作息时间运行的。林汉隆今天上午参加了工能委的几个会议，讨论技术路线，下午又到机械厂去帮忙解决些问题。忙到差不多三点才结束。然后他才把注意力放到光学厂的工作上。
 
 　　走进车间里，他注意到煤气灯的阀门关好了——二天前有个车间的夜班工人早晨下班的时候没有关闭煤气灯的阀门，结果成了《安全通报》上的典型。安全教育果然得常抓不怠才行。
+[y004]: /characters/y004 "展无涯"
