--- a/_posts/2012-5-24-5-14800.md
+++ b/_posts/2012-5-24-5-14800.md
@@ -62,7 +62,7 @@ tag: [normal]
 
 　　填写记录，查询设备，检查库存和产品花了林汉隆上班之后差不多一小时的时间。
 
-　　林汉隆快要填完纪录的时候听见有人叫他，回头一看是展无涯、孙立等一干人等正向他走来。他刷刷几笔填完记录签上名，把本子放回去。
+　　林汉隆快要填完纪录的时候听见有人叫他，回头一看是[展无涯][y004]、孙立等一干人等正向他走来。他刷刷几笔填完记录签上名，把本子放回去。
 
 　　机械厂的元老技术人员们围在坏了的球面磨床前。
 
@@ -70,21 +70,21 @@ tag: [normal]
 
 　　这个伞形齿轮是铸造出来的，但是显然在铸造的时候出了些问题。
 
-　　“嘿嘿，难免难免。”展无涯出来打圆场，“废料库要回炉的零件堆成山，可靠性办公室的人连失效分析都做不过来。”
+　　“嘿嘿，难免难免。”[展无涯][y004]出来打圆场，“废料库要回炉的零件堆成山，可靠性办公室的人连失效分析都做不过来。”
 
 　　“坏倒不要紧，别把我的玻璃打坏了就行。”林汉隆也不打算深究，这种事在全临高每天都在发生，连军舰上要用的大炮都出过齿轮断裂之类的事故，何况这里了，“能修么？”
 
 　　一直凑近了看断面的孙立摇了摇头：“怕是不行。裂缝肉眼可见，不探伤的话也不知道多深。”他比划着，“没裂缝的话，照说冷焊就可以搞定了。”
 
-　　展无涯拍拍林汉隆的肩膀。“给你做一个更好的。”大战结束后军火生产速度放慢，原先预备的材料还有一些，所以展无涯说话也颇有底气。
+　　[展无涯][y004]拍拍林汉隆的肩膀。“给你做一个更好的。”大战结束后军火生产速度放慢，原先预备的材料还有一些，所以[展无涯][y004]说话也颇有底气。
 
 　　“做一个新的一周能弄好，你先拿给平面磨床的那个顶着。”
 
 　　林汉隆摇了摇头。“平磨那个不能动啊，双筒镜海军要得急。”
 
-　　展无涯哼哼了一声。光学厂的第一批产品里包括三年式陆军用8倍单筒望远镜（试），其实就是个最简单的折射望远镜，外面加了一个保护、携带用的竹筒。海军对这么简陋的东西不屑一顾，他们要求视野好、透光度高、握持方便，还要有良好的密封性、抗腐蚀性云云。他们要求出个双筒望远镜，好一下子能把陆军的装备给比下去。大量造双筒要平面磨床来做直角棱镜，这就涉及到光学厂的追加投资和编制扩大问题。好在远在三亚的[王洛宾][y003]也支持造双筒——他可以做成固定式地放在各个瞭望塔上。作为光学专业出身，[王洛宾][y003]从情感上也是支持扩大光学工业规模的。
+　　[展无涯][y004]哼哼了一声。光学厂的第一批产品里包括三年式陆军用8倍单筒望远镜（试），其实就是个最简单的折射望远镜，外面加了一个保护、携带用的竹筒。海军对这么简陋的东西不屑一顾，他们要求视野好、透光度高、握持方便，还要有良好的密封性、抗腐蚀性云云。他们要求出个双筒望远镜，好一下子能把陆军的装备给比下去。大量造双筒要平面磨床来做直角棱镜，这就涉及到光学厂的追加投资和编制扩大问题。好在远在三亚的[王洛宾][y003]也支持造双筒——他可以做成固定式地放在各个瞭望塔上。作为光学专业出身，[王洛宾][y003]从情感上也是支持扩大光学工业规模的。
 
-　　“平磨的话，最多三五天就能把东西凑齐了。”展无涯顿了一顿。“陆军土海军洋，还真没说错。不知道海兵队要什么？”
+　　“平磨的话，最多三五天就能把东西凑齐了。”[展无涯][y004]顿了一顿。“陆军土海军洋，还真没说错。不知道海兵队要什么？”
 
 　　众人又闲聊了一会，渐渐散了。对其他人来说，现在已经接近晚饭的点，吃过饭做点事就可以开始夜间的休息娱乐了，要有精力的还可以抱着女仆去滚床单。而林汉隆的一天才刚刚开始。晚上气温比较稳定，有利于光学零件的加工。更重要的是他可以独占科技部的动力输出和网络。
 
@@ -134,3 +134,4 @@ tag: [normal]
 
 　　两个人正说着话，外面有人推着一辆平板车过来。林汉隆示意让人从车上取下一口扁平的木箱子，放在两人身边的地上。打开箱子，里面是一层草垫子。拿开草垫，露出五个小盒子，同样用草垫子隔好。林汉隆伸手拿起一个小盒子打开。里面是一个放大镜，嵌在盒底的绒布上。
 [y003]: /characters/y003 "王洛宾"
+[y004]: /characters/y004 "展无涯"
