--- a/_posts/2012-9-2-5-24900.md
+++ b/_posts/2012-9-2-5-24900.md
@@ -14,23 +14,23 @@ tag: [normal]
 
 　　目前来说，磷青铜弹簧主要是用在较为精密的工业设备上，比如钟博士一直在全心研发的计时器和仪表——它的生产成本很高。
 
-　　最好是能用较为劣质易得的材料来替代。林深河考虑再三，找到了展无涯，问他能不能对熟铁丝进行热处理？
+　　最好是能用较为劣质易得的材料来替代。林深河考虑再三，找到了[展无涯][y004]，问他能不能对熟铁丝进行热处理？
 
-　　“当然可以，不过你热处理熟铁丝做什么？”展无涯很奇怪。
+　　“当然可以，不过你热处理熟铁丝做什么？”[展无涯][y004]很奇怪。
 
 　　“做弹簧——炮弹引信上用。”
 
-　　展无涯不可置信地看了他一眼：炮弹引信上用得弹簧是个老生常谈的拦路虎，现在林深河居然跑来告诉他要用热处理过的熟铁丝来做！
+　　[展无涯][y004]不可置信地看了他一眼：炮弹引信上用得弹簧是个老生常谈的拦路虎，现在林深河居然跑来告诉他要用热处理过的熟铁丝来做！
 
 　　工能委按照旧时空的标准生产不同号数的熟铁丝，比较高级的还镀了锌——熟铁丝在元老院的工农业生产中用途很广，临高电信的电报也是用熟铁丝敷设的。
 
-　　林深河拿出了引信结构模型——这是他委托机械厂的人做得等比例剖面模型，把具体的工作状况和原理都详细阐述了一遍，展无涯研究了半天，最后答应用铁丝试试看。
+　　林深河拿出了引信结构模型——这是他委托机械厂的人做得等比例剖面模型，把具体的工作状况和原理都详细阐述了一遍，[展无涯][y004]研究了半天，最后答应用铁丝试试看。
 
 　　他们选择了20号的镀锌熟铁丝。用专门的卷弹簧机将熟铁丝卷制成弹簧，然后再进行热处理。
 
 　　随后林深河用测试设备对熟铁丝弹簧和磷青铜弹簧进行了对比试验，他自己也清楚：这两种弹簧在性能上完全相同是不可能的。结果当然没有出乎他的意料。
 
-　　“似乎是不能替代。”展无涯说。
+　　“似乎是不能替代。”[展无涯][y004]说。
 
 　　“装在火炮上发射试试看吧。”林深河不死心。
 
@@ -70,7 +70,7 @@ tag: [normal]
 
 　　新引信终于到了正式亮相的时候，上次借来的70mm线膛炮还留在靶场上，林深河又借来了一门24磅滑膛榴弹炮——没有迫击炮，臼炮又不大合用，暂时用它来代替。
 
-　　“锥形体的炮弹也可以用滑膛炮发射吗？”展无涯问道。
+　　“锥形体的炮弹也可以用滑膛炮发射吗？”[展无涯][y004]问道。
 
 　　“当然可以。”林深河说，“迫击炮也不用发射球形炮弹。”
 
@@ -101,3 +101,4 @@ tag: [normal]
 　　而现在，仅仅是简单的搜索就在弹坑周围五米之内发现了各种尺寸的弹片七十多个。林深河指出，如果能够进一步的改进弹体材料，采取预制破片的措施，炮弹爆炸之后的破片效果还要好得多。
 
 　　发射磷青铜弹簧装配的A引信炮弹在两种火炮上的二十次发射全部成功，发射B引信炮弹的试验，在24磅滑膛炮上取得了全部成功，在70mm线膛加农炮的第三次发射时候，掩蔽部里的众人跟只觉得火光一闪，地面传来一声巨大的闷响，地皮也微微的震动起来——炮弹在炮膛内爆炸了。
+[y004]: /characters/y004 "展无涯"
