--- a/_posts/2013-11-22-6-22300.md
+++ b/_posts/2013-11-22-6-22300.md
@@ -32,7 +32,7 @@ tag: [normal]
 
 　　“圣地亚哥棱堡上至少已经增加了三处新炮位，安装的都是用旧青铜炮拉出膛线的24磅改装线膛炮。”照片一点点地被放大，他手中的白藤鞭在上边圈圈点点，提醒与会者注意一些细节：炮尾下的俯仰螺杆，炮台地面铺设的带有转轴的木包铁皮滑轨，四轮炮车紧贴在三角形桁材组成的下方大架上。
 
-　　“倒有点中情局的范儿了，”江山在心里想，“但派外勤特工渗透到敌营里去实地拍摄这些情报，再用伪装的通勤船送照片回来。速度慢、效率低还不安全。”他的思绪一直飞到若干年后外情局会议室，大屏幕上滚动着卫星拍摄的实时侦察图像，无人机的航拍照片纤毫毕现，外情局所属的U2黑鸟和全球鹰构成全世界效率最高的侦测网络。以后要去和展无涯谈谈，航空工业应当尽快上马。在飞机搞出来以前先设法把资源部的遥控航模要过来，无人机部队可以先着手搞起来。林汉隆那儿也得去问问，航空侦察怎么能离得开高精度镜头和相机……
+　　“倒有点中情局的范儿了，”江山在心里想，“但派外勤特工渗透到敌营里去实地拍摄这些情报，再用伪装的通勤船送照片回来。速度慢、效率低还不安全。”他的思绪一直飞到若干年后外情局会议室，大屏幕上滚动着卫星拍摄的实时侦察图像，无人机的航拍照片纤毫毕现，外情局所属的U2黑鸟和全球鹰构成全世界效率最高的侦测网络。以后要去和[展无涯][y004]谈谈，航空工业应当尽快上马。在飞机搞出来以前先设法把资源部的遥控航模要过来，无人机部队可以先着手搞起来。林汉隆那儿也得去问问，航空侦察怎么能离得开高精度镜头和相机……
 
 　　“……甲米地半岛北缘的海岸发现的要塞工程完全不同，没有棱堡。四座环形的海岸炮台，由交通壕联通，外侧延伸出去一条可以容纳步兵的掩蔽壕，请注意这里构筑的胸墙……这座要塞与南边的半岛上的圣菲利普要塞正好隔海相对，如果安装的都是射程够远的线膛炮，可以有效封锁甲米地湾。”
 
@@ -47,3 +47,4 @@ tag: [normal]
 　　“好啊，那个日本混蛋搞出这么多天才炮台和炮架上，他能装什么家伙上去？给每一门西班牙大炮都拉出膛线？别的不说，把那些乱七八糟的炮每种口径都得配上够用的新炮弹，这就是个天才也能活活折腾死。”
 
 　　“日本鬼子搞得还是可胀弹带，不错，够先进，有他祖宗家八九掷弹筒和他干爹家化学迫击炮的遗风。不过弹带是紫铜的，这价钱可就蹭蹭地上去了，还需要精密加工。他自己不怕累死，西班牙总督可要担心被丫玩破产的。”
+[y004]: /characters/y004 "展无涯"
