--- a/_posts/2013-7-22-6-10000.md
+++ b/_posts/2013-7-22-6-10000.md
@@ -18,27 +18,27 @@ tag: [normal]
 
 　　“那我得排几号？”
 
-　　“13号吧。”满身油污的展无涯拿起桌子上横七竖八的一堆木板夹中的一个看了看。
+　　“13号吧。”满身油污的[展无涯][y004]拿起桌子上横七竖八的一堆木板夹中的一个看了看。
 
 　　“那多不吉利。”葛欣馨说，“能提前一号吗？”
 
-　　“那就14号吧。”展无涯微微一笑，“14号也不吉利，要不大吉大利你来个16号，18号也成。”
+　　“那就14号吧。”[展无涯][y004]微微一笑，“14号也不吉利，要不大吉大利你来个16号，18号也成。”
 
 　　“别，别，我还是13号吧。”葛欣馨有点遗憾的笑了笑，“大概要几天呢？”
 
-　　展无涯看了看墙上的“生产计划总揽表”，说：“乐观点说再过六个月吧。”
+　　[展无涯][y004]看了看墙上的“生产计划总揽表”，说：“乐观点说再过六个月吧。”
 
 　　“六个月！”
 
-　　“差不多就是六个月。”展无涯说，“这玩意要用直流电。眼下我们造不出合格的变压器来，只能给每个准备用得氢氧焊机的地方都先安装一台发电机……”
+　　“差不多就是六个月。”[展无涯][y004]说，“这玩意要用直流电。眼下我们造不出合格的变压器来，只能给每个准备用得氢氧焊机的地方都先安装一台发电机……”
 
 　　“好吧，不过您得给我送货上门呀。”
 
-　　“这个当然，我也不敢让你直接拿去用，不然烧了实验室，两季非找我拼命不可。包送包安装……”展无涯随手写了一张排号单，塞给了葛欣馨，“东西好了我会派人去安装的。你会用这玩意不？”
+　　“这个当然，我也不敢让你直接拿去用，不然烧了实验室，两季非找我拼命不可。包送包安装……”[展无涯][y004]随手写了一张排号单，塞给了葛欣馨，“东西好了我会派人去安装的。你会用这玩意不？”
 
 　　“会用——”
 
-　　“我敢说我们造得你肯定不会用——克难版啊。千万不要拿旧时空的标准看待本时空的设备。安全第一。”展无涯有点愁眉不展的感觉。
+　　“我敢说我们造得你肯定不会用——克难版啊。千万不要拿旧时空的标准看待本时空的设备。安全第一。”[展无涯][y004]有点愁眉不展的感觉。
 
 　　葛欣馨铩羽而归，不过，实验不等人，既然氢氧焊机一时半会解决不了，氢氧焰就没戏了，只好退而求其次的先上本生灯。反正当初本生第一次观测光谱的时候用得就是这个。
 
@@ -95,3 +95,4 @@ tag: [normal]
 　　使用AgNO3滴定Cl-，确定NaCl浓度，和通过AES半定量估计对比。发现差别不大即可以使用。
 
 　　全套实验做完之后，葛欣馨对整个结果还算满意。下一步她打算用CCD光谱仪对今天的实验结果进行对比标定。不过，大致来说摄谱法原子发射光谱可以算是开发成功了。这17世纪的黑科技算是成功了一半。
+[y004]: /characters/y004 "展无涯"
