--- a/_posts/2013-7-23-6-10100.md
+++ b/_posts/2013-7-23-6-10100.md
@@ -40,7 +40,7 @@ tag: [normal]
 
 　　“下一步的改进计划是用氢氧焊机替代本生灯，本生灯的温度偏低，而且煤气含有较多的杂质，容易干扰光谱——当然，最理想的还是电弧法，毕竟氢氧焰作为激发源本身具有一定光谱特征，温度也不够高。”
 
-　　“电弧法的设备要凑齐，我看得到三五四五不知道行不行。”展无涯说。
+　　“电弧法的设备要凑齐，我看得到三五四五不知道行不行。”[展无涯][y004]说。
 
 　　“有希望就有动力。”葛欣馨说，“我还有一个想法，请大家斟酌。”
 
@@ -77,3 +77,4 @@ tag: [normal]
 　　研究的结果还是直接用先炼硅铁，再用炼硅钢，然后热轧出硅钢来。性能方面肯定没法讲究，但是起码比直接上低碳钢强。
 
 　　硅铁的炼制，有人提到可以使用坩埚法来炼硅铁，但是几个人讨论觉得坩埚恐怕很难达到足够的温度，而且坩埚的量太小，用来炼制少量特种钢还行，对需求量较大的硅铁来说太小了。
+[y004]: /characters/y004 "展无涯"
