--- a/_posts/2014-8-16-7-00700.md
+++ b/_posts/2014-8-16-7-00700.md
@@ -14,7 +14,7 @@ tag: [normal]
 
 　　“这件事还得让组织处的明朗同志去做。”马甲在内部会议上说，“杨云同志是干人力资源出身，企业那套用工体制和官场上不一样。”
 
-　　这边，邬德和展无涯陷入了工业口诸位元老的包围之中，制造总监部的撤销使得这些一直在工业口工作的元老们陷入了茫然，现在的产经省等于是将工业口和商业口合并到了一起，特别是将目前所有的国有和合资企业都列入了“国策公司”，归并到企划院名下管理……这些大挪移一般的调整让很少关心体制问题的工业口元老们顿时摸不着头脑。
+　　这边，邬德和[展无涯][y004]陷入了工业口诸位元老的包围之中，制造总监部的撤销使得这些一直在工业口工作的元老们陷入了茫然，现在的产经省等于是将工业口和商业口合并到了一起，特别是将目前所有的国有和合资企业都列入了“国策公司”，归并到企划院名下管理……这些大挪移一般的调整让很少关心体制问题的工业口元老们顿时摸不着头脑。
 
 　　“我倒不是对邬德不放心，这几年合作的还不错。但是企划院毕竟不是工业部门，恐怕沟通起来有隔阂啊。”
 
@@ -66,3 +66,4 @@ tag: [normal]
 
 　　生活秘书们大多出身穷苦，有的甚至是从死亡线上挽救回来的。一旦成为元老的枕边人，等于“麻雀变成凤凰”，物质和精神上的差别不啻于云泥之别。不论对元老有多少真实的感情，生活秘书们一定会竭力维持和提升自己的地位。
 [y001]: /characters/y001 "萧子山"
+[y004]: /characters/y004 "展无涯"
