--- a/_posts/2014-8-18-7-00900.md
+++ b/_posts/2014-8-18-7-00900.md
@@ -60,7 +60,7 @@ tag: [normal]
 
 　　“不，我觉得我们还是把‘家庭’看得太重，忘记了他们首先是元老。”马千瞩说，“咱们应该少提‘家庭’，多谈‘个人’，毕竟他们作为元老是一个个体。每一位元老都是为我们的大业出力奋斗，仅仅因为他们是某个家庭中的一员就怀疑限制他们，这是很不可取的。反而会加强元老们间的‘家族’观念，这是可不可取的。”
 
-　　展无涯也说：“我们的老同志还是很讲传统道德的。在元老院里起到了不错的表率作用。这个规定一出来，女元老就不说了，没这个能力了。男性的生殖能力可是可以保持到很老的。本来人倒是安之如素，颐养天年了。你这么一搞，就算他本人没这个意向，小辈大概也会竭力撺掇他弄个生活秘书什么的……这不是破坏人家庭嘛！”
+　　[展无涯][y004]也说：“我们的老同志还是很讲传统道德的。在元老院里起到了不错的表率作用。这个规定一出来，女元老就不说了，没这个能力了。男性的生殖能力可是可以保持到很老的。本来人倒是安之如素，颐养天年了。你这么一搞，就算他本人没这个意向，小辈大概也会竭力撺掇他弄个生活秘书什么的……这不是破坏人家庭嘛！”
 
 　　司凯德也来附和：“真要动脑筋，有得是办法来回避这个规定。再说收养子女也不好，等于也是一种联姻。”
 
@@ -74,3 +74,4 @@ tag: [normal]
 [y001]: /characters/y001 "萧子山"
 [y002]: /characters/y002 "文德嗣"
 [y003]: /characters/y003 "王洛宾"
+[y004]: /characters/y004 "展无涯"
