--- a/_posts/2014-8-19-7-01000.md
+++ b/_posts/2014-8-19-7-01000.md
@@ -36,7 +36,7 @@ tag: [normal]
 
 　　农林水产相毫无悬念的由吴南海担任。
 
-　　经济产业相在工业口元老的热烈欢呼声中由落入了展无涯之手。这点倒也没有出乎意料。
+　　经济产业相在工业口元老的热烈欢呼声中由落入了[展无涯][y004]之手。这点倒也没有出乎意料。
 
 　　文化科学相经过了一番激烈的竞争，最后这顶挂冠还是戴在了教育口的胡青白头上――教育口人多不说，元老多半还当过兼职教师。人头熟悉。最有竞争力的钟利时等人对行政职务避之不及，自然也便宜了教育口。至于文宣口，实力就显得差多了――丁丁只进入了提名阶段，由于第一轮投票得票不足。未进入第二轮投票。
 
@@ -126,3 +126,4 @@ tag: [normal]
 [y001]: /characters/y001 "萧子山"
 [y002]: /characters/y002 "文德嗣"
 [y003]: /characters/y003 "王洛宾"
+[y004]: /characters/y004 "展无涯"
