--- a/_posts/2014-8-23-7-01400.md
+++ b/_posts/2014-8-23-7-01400.md
@@ -42,11 +42,11 @@ tag: [normal]
 
 　　司凯德挠了下头说：“多少不敢说，但是肯定成吨的。就是不知道长途运输影响不影响疗效。另外英国东印度公司会从印度运来硝石、石墨，还有石棉，还有鸦片。”
 
-　　展无涯拍着司凯德的肩膀赞许的说：“小司啊，你们的工作做得很出色嘛！想不到啊。居然能搞到了橡胶、石墨和石棉。没说的，我们明年一定把电炉搞出来，那样硅钢、45#钢、65锰钢、不锈钢、电石、电焊全有指望了。”
+　　[展无涯][y004]拍着司凯德的肩膀赞许的说：“小司啊，你们的工作做得很出色嘛！想不到啊。居然能搞到了橡胶、石墨和石棉。没说的，我们明年一定把电炉搞出来，那样硅钢、45#钢、65锰钢、不锈钢、电石、电焊全有指望了。”
 
 　　“电炉不在五年计划里吧。”
 
-　　“我以为弄不到合适的原料就没写，再说把握也不是太大……”展无涯说，“不过电炉是我们必须要迈过去的一道坎。没有这个很多东西就无从着手。是我们产业链上的一个关键环节，还是尽早拿下来。”
+　　“我以为弄不到合适的原料就没写，再说把握也不是太大……”[展无涯][y004]说，“不过电炉是我们必须要迈过去的一道坎。没有这个很多东西就无从着手。是我们产业链上的一个关键环节，还是尽早拿下来。”
 
 　　“……夸克穷除了继续运来奴隶之外，马匹合同将在明年交货完成，我们采购的欧洲和印度的几种种马都会运来。不过死亡率怕是很高……”
 
@@ -76,3 +76,4 @@ tag: [normal]
 
 　　“要自相残杀也容易多了。”冉耀说道，“我怕荷兰人本来没什么想法，他们中间先有人去勾结荷兰人！”
 [y002]: /characters/y002 "文德嗣"
+[y004]: /characters/y004 "展无涯"
