--- a/_posts/2014-8-24-7-01500.md
+++ b/_posts/2014-8-24-7-01500.md
@@ -40,7 +40,7 @@ tag: [normal]
 
 　　“……我们的农业存在的主要问题还是老调重弹。现代农业有三大法宝：种子、化肥、农药。种子我们有，但是育种规模还跟不上。良种播种率即使在直营土地上也达不到三成；化肥太少，现在靠种植绿肥和粪便垃圾发酵来代替氮肥，用鸟粪石和鱼粉来代替磷肥，不但肥效低，耗费劳力也多；农药上的问题最大：我们基本上不能产化学农药，只能靠所谓的土农药。土农药的主要原料是植物，要规模化生产就得规模化种植，需要占用大量土地和人力，而且药效差，保存时间短，从成本上看是很不合算。而现代良种在优化的时候一般不考虑病虫害，所以对农药的需求特别大。希望化工口能够尽快在有机农药上有所突破。”
 
-　　展无涯想了想说：“化工业的确是我们的短板。要有突破还得在材料上。我们的加工技术是严重过剩，材料方面严重短板。刚才说到搞电炉的事情，如果能搞成，化工和电力的门基本上可以打开了。现在海南有锰、有个小钨矿里边还有点钼。计划是开了年就开采，但是我们还缺少太多的东西。主要是铬、镍，没有这个我们基本上没法上化工，不管是石化、还是煤化工全没指望的，合成氨，农药全没指望。”
+　　[展无涯][y004]想了想说：“化工业的确是我们的短板。要有突破还得在材料上。我们的加工技术是严重过剩，材料方面严重短板。刚才说到搞电炉的事情，如果能搞成，化工和电力的门基本上可以打开了。现在海南有锰、有个小钨矿里边还有点钼。计划是开了年就开采，但是我们还缺少太多的东西。主要是铬、镍，没有这个我们基本上没法上化工，不管是石化、还是煤化工全没指望的，合成氨，农药全没指望。”
 
 　　“铬和镍非常不好弄。倒不是提炼有难度，而是17世纪还没有哪个地方开采和提炼这两种金属：我们得从头到尾的自己做一条产业链。关键是国内这两种矿还不好找……”
 
@@ -60,3 +60,4 @@ tag: [normal]
 
 　　马甲说：“每一部法律的第一款都写着，元老神圣不受侵犯，元老是国家的柱石，元老不受本部法律的制巴拉巴拉，如涉及到元老的法律问题一律由元老院按照元老共同纲领处理。”
 [y001]: /characters/y001 "萧子山"
+[y004]: /characters/y004 "展无涯"
