--- a/_posts/2014-8-25-7-01600.md
+++ b/_posts/2014-8-25-7-01600.md
@@ -26,7 +26,7 @@ tag: [normal]
 
 　　“搬迁我是没意见，就是那些搬不走的厂房、窑口可惜了。”程栋多少有些惋惜。
 
-　　“其实也没什么可惜的。这些窑口大多是急就式的，标准不高。隐患很大。留下的厂房还可以给其他厂子用。”展无涯倒是满不在乎，“再说这么几年用下来，就算寿命没到也得大修了。正好乘着搬迁的机会产业升级。”
+　　“其实也没什么可惜的。这些窑口大多是急就式的，标准不高。隐患很大。留下的厂房还可以给其他厂子用。”[展无涯][y004]倒是满不在乎，“再说这么几年用下来，就算寿命没到也得大修了。正好乘着搬迁的机会产业升级。”
 
 　　接着他们又谈了些大陆攻略方面的细节问题，最后是关于元老下乡搞蹲点调查的安排。
 
@@ -70,3 +70,4 @@ tag: [normal]
 
 　　由于资源有限，农业口刚刚在三亚建立起几个大型种植园，又在琼北几个农业基础好的传统县采用打散安置的方式，安置了移民3万人。
 [y001]: /characters/y001 "萧子山"
+[y004]: /characters/y004 "展无涯"
