--- a/_posts/2010-1-27-2-10200.md
+++ b/_posts/2010-1-27-2-10200.md
@@ -8,13 +8,13 @@ tag: [normal]
 
 　　“火炮生产领导小组第一次会议现在开始！”
 
-　　在机械厂简陋，但是足够宽敞的办公室，竖起了一块黑板。以机械组长展无涯为首的兵器爱好者们齐聚一堂，气氛极端的热烈，每个人都在热烈的讨论该上哪一种火炮。
+　　在机械厂简陋，但是足够宽敞的办公室，竖起了一块黑板。以机械组长[展无涯][y004]为首的兵器爱好者们齐聚一堂，气氛极端的热烈，每个人都在热烈的讨论该上哪一种火炮。
 
-　　“现在，我先介绍下与会者。”展无涯把参与会议的人都介绍了一遍，机械组的主要骨干力量，诸如[王洛宾][y003]、姜野、萧白朗之类自不必说，还来了一些并不太懂机械，但是属于武器爱好者的人物，这里包括把“炮，更多的炮”挂在嘴边，屡次自封“炮兵上将”的张柏林，有喜欢挥舞斧头王瑞相，还有担任过机械弩结构设计和现场施工指导的李运兴，兵器设计与工程设计相关专业、装甲兵指挥专业的白羽……最后是林深河同学，他拥有大量实践经验。
+　　“现在，我先介绍下与会者。”[展无涯][y004]把参与会议的人都介绍了一遍，机械组的主要骨干力量，诸如[王洛宾][y003]、姜野、萧白朗之类自不必说，还来了一些并不太懂机械，但是属于武器爱好者的人物，这里包括把“炮，更多的炮”挂在嘴边，屡次自封“炮兵上将”的张柏林，有喜欢挥舞斧头王瑞相，还有担任过机械弩结构设计和现场施工指导的李运兴，兵器设计与工程设计相关专业、装甲兵指挥专业的白羽……最后是林深河同学，他拥有大量实践经验。
 
 　　这次碰头会的目的不是布置生产，而是确定技术路线，所以应该叫做“技术路线研讨会”。
 
-　　“大家先不要考虑造什么12磅山地榴好还是造92步兵炮好，从实用角度和制造水平入手来讨论。”展无涯定下了讨论的基调。
+　　“大家先不要考虑造什么12磅山地榴好还是造92步兵炮好，从实用角度和制造水平入手来讨论。”[展无涯][y004]定下了讨论的基调。
 
 　　从穿越者拥有的机械加工能力来说，加工水平凌驾于这个世界的每一种文明之上。现在又炼出了钢，制造简单的钢制线膛后装炮已经不存在太大的技术难题。当然做管退炮有个弹簧的瓶颈不好解决，但是架退炮毫无问题。
 
@@ -60,7 +60,7 @@ tag: [normal]
 
 　　“那只是造得出来，不等于能够批量制造。一条子弹的生产线都有30多台专用设备，炮弹需要得更多，工业能力显然还上不了这样的生产线。”
 
-　　“没错，”展无涯承认，“而且材料也不见得能过关。”弹体不管是采用冷拔还是热拔，都得有专门的圆棒料，还需要制造专用设备。倒不是说工业部门做不到，而是这需要一整套工业体系才能支持，否则成本高得难以想象。
+　　“没错，”[展无涯][y004]承认，“而且材料也不见得能过关。”弹体不管是采用冷拔还是热拔，都得有专门的圆棒料，还需要制造专用设备。倒不是说工业部门做不到，而是这需要一整套工业体系才能支持，否则成本高得难以想象。
 
 　　“不，老式的尖形弹没这么复杂的，”林深河说，“早期后膛炮弹弹体是铸铁的，外面包铅，用简易式碰炸引信，弹内装黑炸药，用黑火药包作发射药，不带药筒，也没有底火，发射的时候也是用点火具点火。1890年前生产的炮弹大多属于这一类。这种炮弹用在92步兵炮是不行的，用在Armstrong炮上绝无问题。”
 
@@ -78,3 +78,4 @@ tag: [normal]
 
 　　【注：本章内关于在17世纪铸造线膛炮的评论情节，全部来自SB论坛的SANJYSAN，关于Armstrong炮的说明由[王洛宾][y003]本人提供】
 [y003]: /characters/y003 "王洛宾"
+[y004]: /characters/y004 "展无涯"
