--- a/_posts/2010-11-26-3-22200.md
+++ b/_posts/2010-11-26-3-22200.md
@@ -18,7 +18,7 @@ tag: [normal]
 
 　　设备在南宝矿场新建的采矿厂一号车间里安装起来了。一号车间是冰风搞的大跨度铁制桁架厂房，足有三层楼这么高。结构采用钢筋混凝土立柱支撑。地坪用混凝土浇注，并且安装有铁制的轨道用来推送矿石。
 
-　　车间的顶棚上安装了一台天车，用来运送一个大型翻斗为破碎机装料——照展无涯的看法，其实最好是用皮带机，不过暂时他们还没有合适的代用品，如果鹿皮做，未免太过奢侈了。
+　　车间的顶棚上安装了一台天车，用来运送一个大型翻斗为破碎机装料——照[展无涯][y004]的看法，其实最好是用皮带机，不过暂时他们还没有合适的代用品，如果鹿皮做，未免太过奢侈了。
 
 　　最后萧贵来安装了蒸汽机。最后，这套系统终于安装完成了。由钢铁和巨大的底座构成的总重量差不多有十来吨的庞大队伍矗立在车间中央，不用说土著职工，就算穿越者自己都觉得叹为观止。
 
@@ -36,7 +36,7 @@ tag: [normal]
 
 　　装满斗车组被拉到斜坡上的装料站上，利用高低落差直接翻卸在牛车的车斗里再运走。整个过程对人力装卸的需求减少到最低。
 
-　　展无涯计算了下，只粉碎建筑用的碎石的话，每天破碎机能处理出差不多五十吨碎石，如果这些破碎工作用人力去做，没有三四百人做不下来。
+　　[展无涯][y004]计算了下，只粉碎建筑用的碎石的话，每天破碎机能处理出差不多五十吨碎石，如果这些破碎工作用人力去做，没有三四百人做不下来。
 
 　　而现在，连锅炉的维护工人、操作天车的人员都算在内，一班有二十个工人就够了。劳动效率上的差异简直可以用翻天覆地来形容。
 
@@ -83,3 +83,4 @@ tag: [normal]
 　　单道谦说：“我看这样好了，违反交通规则被抓的人，全部划归我们交通局使用。”
 
 　　交通局工程多，事务多，免费劳力多多益善。不仅要修桥铺路，还能用来指挥交通。
+[y004]: /characters/y004 "展无涯"
