--- a/_posts/2010-4-21-3-00300.md
+++ b/_posts/2010-4-21-3-00300.md
@@ -28,7 +28,7 @@ tag: [normal]
 
 　　“能仿制吗？我想设计图应该是有的。这儿专利法也管不着。”
 
-　　展无涯摇摇头：“自动机床完全仿制肯定搞不定，但是制造专用设备是可以的。”
+　　[展无涯][y004]摇摇头：“自动机床完全仿制肯定搞不定，但是制造专用设备是可以的。”
 
 　　“也可以了，无非是生产效率低一些。再低也不见得能低过手工敲打磨制的工匠。”
 
@@ -88,7 +88,7 @@ tag: [normal]
 
 　　“呵呵，不光要印染厂。”[文德嗣][y002]说，“其实我们自己最好掌握原棉加工，倒不是为了垄断。要老百姓自己去加工原棉，做出来的棉纱质量很难保证。有必要设立一个梳棉厂，把原棉清理分级，再发包给加工户。”
 
-　　“织毛巾机和针织品用的机器很简单，我帮人搞过。”展无涯说，“不过梳棉机我可不懂。用什么机器纺织帆布就更不懂了。”
+　　“织毛巾机和针织品用的机器很简单，我帮人搞过。”[展无涯][y004]说，“不过梳棉机我可不懂。用什么机器纺织帆布就更不懂了。”
 
 　　“梳棉机容易，结构很简单，回头我就画出来。”[王洛宾][y003]胸有成竹，“制帆布理论上和其他棉织品应该是一样的，不过就是经纬纱均用多股线而已。”
 
@@ -110,3 +110,4 @@ tag: [normal]
 [y001]: /characters/y001 "萧子山"
 [y002]: /characters/y002 "文德嗣"
 [y003]: /characters/y003 "王洛宾"
+[y004]: /characters/y004 "展无涯"
