--- a/_posts/2011-2-13-3-30100.md
+++ b/_posts/2011-2-13-3-30100.md
@@ -12,11 +12,11 @@ tag: [normal]
 
 　　“新建这些设备的技术条件已经完全成熟，物质条件也具备。扩建到这个规模没有问题。”马千瞩回答道，“不过要消耗很多生铁、钢材库存用来制造设备，其他方面的生铁钢材配额必须加以进一步的削减……”
 
-　　“采矿设备怎么办，还有那些配套：锅炉、蒸汽机……这些东西都是成吨的钢材堆出来的。”展无涯提出质疑，“还有计委安排的用于田独的铁轨制造。缺口数量有百分之四十。就算材料不缺，要按时交付还得增加生产设备。”
+　　“采矿设备怎么办，还有那些配套：锅炉、蒸汽机……这些东西都是成吨的钢材堆出来的。”[展无涯][y004]提出质疑，“还有计委安排的用于田独的铁轨制造。缺口数量有百分之四十。就算材料不缺，要按时交付还得增加生产设备。”
 
 　　“这方面当然是保证。”马千瞩翻开笔记本，“诸位，进入八月以来，计委对各方面的钢铁用量全部作了削减，目的就是为了打通钢－煤这个要命的瓶颈。困难是暂时的，只要把这个关口忍过去，钢铁就不会再是一级管控物资了——预期的产量大家也知道了。不过现在的库存还是偏紧得”他随即报出了目前库存的钢、生铁、锻铁存量。
 
-　　“真得不多。”展无涯说。“现在必须停止全部军火生产。铸造火炮和炮弹的对生铁消耗很大。”
+　　“真得不多。”[展无涯][y004]说。“现在必须停止全部军火生产。铸造火炮和炮弹的对生铁消耗很大。”
 
 　　穿越集团的武备工作一直是以一种缓慢但不间断的节奏进行的。计委每个月都分配给武器、弹药、口粮的生产一定的生产配额。至于陆海军要求的专业兵工厂还没有——眼下全是机械厂统包。
 
@@ -114,3 +114,4 @@ tag: [normal]
 [y001]: /characters/y001 "萧子山"
 [y002]: /characters/y002 "文德嗣"
 [y003]: /characters/y003 "王洛宾"
+[y004]: /characters/y004 "展无涯"
