--- a/_posts/2011-4-1-3-34800.md
+++ b/_posts/2011-4-1-3-34800.md
@@ -70,10 +70,11 @@ tag: [normal]
 
 　　“这个是不是太严厉了？”[萧子山][y001]看了之后刚想开口，马千瞩就打断了他：“一点也不严厉，象这样犯下严重组织错误的人，不枪毙已经很便宜他了。这个判决我看很合适，我建议加上一条，要他做出深刻的检查，然后再派他到最艰苦的岗位上反省一年，一年后根据其表现再考虑给他安排其他工作。”
 
-　　“督公！独孤还是年轻人，年轻人一时冲动是难免的，还是手下留情吧。”展无涯劝谏道，他对独孤求婚没什么恶感，只是觉得可惜。
+　　“督公！独孤还是年轻人，年轻人一时冲动是难免的，还是手下留情吧。”[展无涯][y004]劝谏道，他对独孤求婚没什么恶感，只是觉得可惜。
 
 　　“他要进城镇暴的时候可没想过要对群众手下留情，”马千瞩铁板着脸，“对他的处理一定要从重——以儆效尤！”
 
 　　“过了，过了。”程栋见马千瞩脸色铁青，以为他真是恨铁不成钢，深怕真把独孤的政治前途给毁了。在对独孤求婚的态度上这班原来执委会的人和单良这类的群众的感受完全不一样，群众看到的是独孤企图用暴力镇压民主诉求，但是执委会的人看到的是独孤求婚对执委会、对秩序的忠诚。
 [y001]: /characters/y001 "萧子山"
 [y003]: /characters/y003 "王洛宾"
+[y004]: /characters/y004 "展无涯"
