--- a/_posts/2011-6-19-4-04500.md
+++ b/_posts/2011-6-19-4-04500.md
@@ -92,7 +92,7 @@ tag: [normal]
 
 　　甚至许多轻工业产品的产能也被内部消化掉了——比如肥皂，本身产能受到油脂不足的影响，而内部对肥皂的大量需求使得大部分肥皂直接消耗在临高本地了，只有少数高级香皂和透明皂作为奢侈品出口。
 
-　　“莫笑安，这事情就归你考虑了。”展无涯说，“众所周知，要重工业部门出口的唯一可能性就是军火和机器，现在执委会统统不同意，所以出口工业品的重任就落在你们轻工业部身上了。”
+　　“莫笑安，这事情就归你考虑了。”[展无涯][y004]说，“众所周知，要重工业部门出口的唯一可能性就是军火和机器，现在执委会统统不同意，所以出口工业品的重任就落在你们轻工业部身上了。”
 
 　　他叹了口气：“我知道你很为难，好些产品的原料都是‘管控’物资，就算能在市场上旺销你也没法批量投产。不过你还是努力一下吧。”
 
@@ -133,3 +133,4 @@ tag: [normal]
 　　“素济啊，你搞个土著女人当丫鬟女仆什么的都没事。让刘家的女儿当老婆，这是不是有点过头了？”莫笑安说，“貌似元老院里不少人对土著和元老之间的私人勾结是很忌讳的。你要是和刘家结了亲，以后怕是有很多事情说不清了。”
 
 　　莫笑安倒不是危言耸听，这的确是一部分元老的看法——和当地土著实力派结亲，不可避免的得会造成一个依附于元老的新权贵阶层。这个权贵阶层如果利用这种姻亲关系横行不法，穿越集团处理起来就比过去要棘手的多：每个人都有照顾自己亲戚的私心，有时候则完全是出于面子的考虑。
+[y004]: /characters/y004 "展无涯"
