--- a/_posts/2012-12-11-5-34900.md
+++ b/_posts/2012-12-11-5-34900.md
@@ -50,7 +50,7 @@ tag: [normal]
 
 　　冯宗泽考察过本地制造的弓箭。箭头都是济州岛上铁匠铺自己打制的，不但形制粗糙，而且装配的时候弓箭必须锉磨箭杆修配成型才能装配，装配效率不高。所以冯宗泽立刻就引入了标准箭头。
 
-　　现在的标准箭头是在临高制造的，机械厂的工程师们根据现代弓箭的研究资料，开发出了几种不同用途的箭头，进行标准化生产。在展无涯等人看来这种东西其实是小五金的一种，做好模具之后采用冲压设备可以成批连续制造。省工省料。
+　　现在的标准箭头是在临高制造的，机械厂的工程师们根据现代弓箭的研究资料，开发出了几种不同用途的箭头，进行标准化生产。在[展无涯][y004]等人看来这种东西其实是小五金的一种，做好模具之后采用冲压设备可以成批连续制造。省工省料。
 
 　　临高制造的标准箭头送到岛上之后立刻就取代了本地产箭头，即使不依靠行政强制力这一改进的难度也不大：工匠们还没有见过制作的这么精良的箭头。装配时候花费的修锉功夫也大幅度的减少了。原本箭头也是外购的，现在不过是更换一家供货商——而且供货的价格并不比以前高——批量制造的小五金，成本极其低微，实际冯宗泽在销售箭头中还能有盈利。
 
@@ -75,3 +75,4 @@ tag: [normal]
 　　为了攥夺更大的利润，冯宗泽已经在打算以后搞个外贸公司来垄断济州岛的所有进出口业务，让这些弓箭作坊和弓箭铺只作为生产和岛内流通企业存在。
 
 　　视察结束，冯宗泽在朴德欢的陪同下到了他的“弓箭业统制”办公室——就设在附近的一座铺子里。
+[y004]: /characters/y004 "展无涯"
