--- a/_posts/2012-2-1-5-03500.md
+++ b/_posts/2012-2-1-5-03500.md
@@ -34,9 +34,9 @@ tag: [normal]
 
 　　“……远征越南相当于又是一次分兵，且要长期在敌占区维持一定的存在，甚至可能要长期作战，而郑芝龙等海主的威胁还一直未消除……”东门吹雨继续汇报着。
 
-　　“咱们现在是一个怪圈，”展无涯说，“要搞大工业生产就要暴兵抢地盘搞原料燃料，暴兵需要大量军火，军火需要大工业，大工业要原料要燃料，原料燃料需要抢地盘获得，而要抢地盘就得暴兵……”
+　　“咱们现在是一个怪圈，”[展无涯][y004]说，“要搞大工业生产就要暴兵抢地盘搞原料燃料，暴兵需要大量军火，军火需要大工业，大工业要原料要燃料，原料燃料需要抢地盘获得，而要抢地盘就得暴兵……”
 
-　　[文德嗣][y002]打断了展无涯的牢骚话：“这事的确难，但是光摆问题是没结果的——我来谈谈我的看法：先搞个武装商站，支付某些硬通货或者商品，雇佣当地土著挖煤，再从矿工里面招募矿场卫队……”
+　　[文德嗣][y002]打断了[展无涯][y004]的牢骚话：“这事的确难，但是光摆问题是没结果的——我来谈谈我的看法：先搞个武装商站，支付某些硬通货或者商品，雇佣当地土著挖煤，再从矿工里面招募矿场卫队……”
 
 　　“让越南土著挖煤？旧时空听人说他们的工会很强大，动不动就罢工，”司凯德对越南土著的劳动效率表示置疑，他搞外贸出身，当初不少外贸厂为了节约人力成本搬家到了越南，结果没多久就叫苦连天，纷纷诉说越南工人太懒惰。
 
@@ -60,7 +60,7 @@ tag: [normal]
 
 　　“我们的钢铁够用吗？”
 
-　　“有了一号高炉之后，钢铁产能扩充了不止10倍，消耗一些来换取足够的动力煤对我们来说还是有利的。”展无涯因为几天前的高炉点火成功，有点财大气粗的感觉了，“一号高炉现在还没有满负荷工作，每日的生铁产量就超过60吨了。二号高炉再过一个月也可以投产了。”
+　　“有了一号高炉之后，钢铁产能扩充了不止10倍，消耗一些来换取足够的动力煤对我们来说还是有利的。”[展无涯][y004]因为几天前的高炉点火成功，有点财大气粗的感觉了，“一号高炉现在还没有满负荷工作，每日的生铁产量就超过60吨了。二号高炉再过一个月也可以投产了。”
 
 　　“还有药品、加工速食品——食品可以搞来料加工……这些全部可以作为贸易商品销售给北朝。和销售给鞑子的货物差不多。”司凯德说，“我觉得北朝不会拒绝这种贸易要求的。药品和速食品在军事上很有用的。”
 
@@ -76,3 +76,4 @@ tag: [normal]
 
 　　鸿基行动是从人事调动开始的：常师德被调出雷州；严茂达被正式调往雷州出任对越贸易公司的总经理，贝凯出任驻北越贸易代表。后者在临高已经接受了长期的越南语培训——每天跟着电视机学习奇怪的越南话让他实在吃不消。尽管贝凯反复强调他家和越南没什么关系，还是因为长相“很越南”被挑上了驻越南贸易代表的这个职位。
 [y002]: /characters/y002 "文德嗣"
+[y004]: /characters/y004 "展无涯"
