--- a/_posts/2012-4-24-5-11800.md
+++ b/_posts/2012-4-24-5-11800.md
@@ -50,7 +50,7 @@ tag: [normal]
 
 　　“这样我们有点紧张啊，等于是把全部的底子都拿出去了，原本觉得粮食储备宽松一点了。”何鸣有些担心——粮食是军队的命脉，一想到要运走如此之多的粮食，他就觉得很不安。
 
-　　展无涯也觉得悬：“除去军队，我们在临高还有大批的脱产人口，行政人员、学生、工人，这部分人的粮食供应可不能出错，否则容易动摇国本。”
+　　[展无涯][y004]也觉得悬：“除去军队，我们在临高还有大批的脱产人口，行政人员、学生、工人，这部分人的粮食供应可不能出错，否则容易动摇国本。”
 
 　　邬德对这个问题已经做过计算：“粮食安全是有保证的。首先是这批用于发动机计划的粮食是我们额外获得的。我们在没有增加供养人口的情况下得到了这批粮食。用在难民身上并不减少我们原有的储备，也不会增加我们原先的计划粮食支出。其次，在取得全岛政权之后，等于是获得了1631年的全岛粮赋征收权力。这方面的增收是很显著的。而且它是一个稳定性的增收。不比缴获是一次性的。”
 
@@ -61,3 +61,4 @@ tag: [normal]
 　　农委会拥有的早熟甘薯品种大概80-90天就可收获了，土豆、荞麦也都有适用的品种。高雄、屏东一带年平均气温高达25℃，雨水充足，一年到头都可以种植。采取滚动种植梯次收获。等到浙江的大规模移民结束，高雄的农业就算不能为济州岛提供粮食了，自给相当一部分还是能做到的。
 
 　　“……实在发生了供应匮乏的问题，我们还可以利用香港这个基地。直接在广东收购粮食之后船运高雄。两地距离不过350海里。一周即可来回。”他最后说道。
+[y004]: /characters/y004 "展无涯"
