--- a/_posts/2012-5-28-5-15200.md
+++ b/_posts/2012-5-28-5-15200.md
@@ -46,32 +46,33 @@ tag: [normal]
 
 　　会议室里慢慢的安静了下来，大家各回自己的座位落坐。
 
-　　展无涯带着几个归化民秘书急匆匆地走了进来，他作为小机械厂的老板出身，属于什么都会的万金油，因而也几乎没什么休息的时间。林汉隆看到他一身发黑还有点焦痕的工作服，估摸着他多半刚才还在热处理车间里。
+　　[展无涯][y004]带着几个归化民秘书急匆匆地走了进来，他作为小机械厂的老板出身，属于什么都会的万金油，因而也几乎没什么休息的时间。林汉隆看到他一身发黑还有点焦痕的工作服，估摸着他多半刚才还在热处理车间里。
 
-　　工能委的例会没有废话，不说套话，连开场白都没有，展无涯把早晨五点汇总出来的统计表格进行了简单的说明，随后又把今天的任务和重点谈了一谈，特别是各部门反映的问题和要求，凡是有解决方案和答复的都要在会议上说明。
+　　工能委的例会没有废话，不说套话，连开场白都没有，[展无涯][y004]把早晨五点汇总出来的统计表格进行了简单的说明，随后又把今天的任务和重点谈了一谈，特别是各部门反映的问题和要求，凡是有解决方案和答复的都要在会议上说明。
 
 　　晨例会上照例不做讨论，因为在场元老太多，你一言我一语就会花去大量的时间。整个晨会的时间一直控制在三十分钟以内。
 
-　　会议结束前，展无涯关照给部门的头头分发文件，随后他咳嗽了一声：
+　　会议结束前，[展无涯][y004]关照给部门的头头分发文件，随后他咳嗽了一声：
 
 　　“根据文件上的说明，大家把本部门需要增加的人力资源和技能做一个估算表出来，六月三十日之前要上报给企划院——”
 
 　　下面响起了一阵嗡嗡声，人手不足一直是各部门扩大生产的瓶颈问题，每次打报告总是推三阻四的，这次怎么忽然转了性？莫非发动机行动已经正式开始了？就算现在已经开始，一时半会也不会运人回来。
 
-　　“企划院打算对发动机行动中搜罗到的人口进行前置分类和培训。尽量在检疫营就安排一些基本的职业培训，运回临高之后马上就可以充当学徒进入实习。所以希望大家把本部门大致需要的人数和技能都汇报一下。”展无涯说道，“企划院会根据大家上报的计划实施人员培训计划的。注意上报需求总数要和文件上的总配额计划对得起来——超5-10%可以，不能超太多。”
+　　“企划院打算对发动机行动中搜罗到的人口进行前置分类和培训。尽量在检疫营就安排一些基本的职业培训，运回临高之后马上就可以充当学徒进入实习。所以希望大家把本部门大致需要的人数和技能都汇报一下。”[展无涯][y004]说道，“企划院会根据大家上报的计划实施人员培训计划的。注意上报需求总数要和文件上的总配额计划对得起来——超5-10%可以，不能超太多。”
 
-　　最后展无涯表情严肃的通报了最近的重大责任安全事故——锅炉爆炸这一元老院工业体系中的最大杀手最近已经把宝座让给了钢铁厂：几天前钢铁厂刚刚蒸发了五个归化民工人。爆裂的铁水包里泻出来的铁水凝结在地面上，连人的痕迹都没留下来。再加上以前的若干次事故，钢铁厂的死亡率已经超过锅炉爆炸——自从钢铁厂能够出质量稳定的钢铁之后，锅炉的质量状况大为好转。
+　　最后[展无涯][y004]表情严肃的通报了最近的重大责任安全事故——锅炉爆炸这一元老院工业体系中的最大杀手最近已经把宝座让给了钢铁厂：几天前钢铁厂刚刚蒸发了五个归化民工人。爆裂的铁水包里泻出来的铁水凝结在地面上，连人的痕迹都没留下来。再加上以前的若干次事故，钢铁厂的死亡率已经超过锅炉爆炸——自从钢铁厂能够出质量稳定的钢铁之后，锅炉的质量状况大为好转。
 
-　　“同志们，这事情大家一定要引以为戒！”展无涯看着下面的七歪八倒各式各样的元老们，不知道自己这番苦口婆心不知道有没有用处？
+　　“同志们，这事情大家一定要引以为戒！”[展无涯][y004]看着下面的七歪八倒各式各样的元老们，不知道自己这番苦口婆心不知道有没有用处？
 
-　　“还有夏季的防火和防台工作，”展无涯说道，“防火我不多说了。防台关系很大——我们的烟囱比以前多了几十倍，还新造了许多高桁架结构的厂房。等进入七月之后台风就会活跃起来。”
+　　“还有夏季的防火和防台工作，”[展无涯][y004]说道，“防火我不多说了。防台关系很大——我们的烟囱比以前多了几十倍，还新造了许多高桁架结构的厂房。等进入七月之后台风就会活跃起来。”
 
 　　为了安全生产的问题，企划院已经准备搞一次安全大检查工作，对工业区的设备进行一次检查，去除隐患——特别是早期制造的设备和设施，当时条件有限，未免粗制滥造。
 
-　　大家又交头接耳了一番，展无涯随后又布置了安排机械总厂生产螺旋压机的任务。
+　　大家又交头接耳了一番，[展无涯][y004]随后又布置了安排机械总厂生产螺旋压机的任务。
 
-　　“给军工厂制造药柱用的。”展无涯特意说明，力量无需太大，但是要求能稳定而缓慢的输出压力——太猛就直接压爆了。不同形状用途的药柱通过更换模具和调整压力来解决，不光可以做爆破装药，火箭推进剂也能用这个做：形状、密度一致的药柱又是火箭弹道一致性的重要保证，意义非常重大。
+　　“给军工厂制造药柱用的。”[展无涯][y004]特意说明，力量无需太大，但是要求能稳定而缓慢的输出压力——太猛就直接压爆了。不同形状用途的药柱通过更换模具和调整压力来解决，不光可以做爆破装药，火箭推进剂也能用这个做：形状、密度一致的药柱又是火箭弹道一致性的重要保证，意义非常重大。
 
 　　林汉隆的光学厂也得到了正式的望远镜生产任务——陆海军各有一大批订货。陆军的订货除了简单的军官用望远镜之外，还有炮兵使用的较高级的炮队望远镜。林汉隆想着倒是问题不大，就是人力和设备不知道能不能扩充一些？另外就是尴尬的动力问题，光学厂没有自己的动力车间，用得是科技部的动力车间输出的动力，这样的动力输出不是很稳定，对需要稳定输出动力来运作磨床等设备的光学厂来说有隐患。
 
-　　这些问题一会都得和展无涯商量下，拿个方案来，林汉隆想着。
+　　这些问题一会都得和[展无涯][y004]商量下，拿个方案来，林汉隆想着。
+[y004]: /characters/y004 "展无涯"
