--- a/_posts/2013-11-29-6-23000.md
+++ b/_posts/2013-11-29-6-23000.md
@@ -6,13 +6,13 @@ path: 2013-11-29-6-23000.md
 tag: [normal]
 ---
 
-　　他的咖啡还没有喝完，桌上的电话就响了起来。是制造总监部的展无涯打来的，他知道对外情报局有人在马尼拉活动，因而提出是否能够协助掩护一支小型勘探队进入菲律宾。制造总监部盯上了
+　　他的咖啡还没有喝完，桌上的电话就响了起来。是制造总监部的[展无涯][y004]打来的，他知道对外情报局有人在马尼拉活动，因而提出是否能够协助掩护一支小型勘探队进入菲律宾。制造总监部盯上了
 
 　　菲律宾群岛丰富的矿产资源，除了人尽所知的金铜矿，他们更看重镍与铬这两种菲律宾的优势矿产。
 
-　　“……这两种矿石对我们非常、非常、非常重要……”展无涯用了三个非常来加重语气。他的焦急是理所当然的。化工部门要扩大产能，就得摆脱玻璃和陶瓷器这两种材料加工性能严重不足的设备制造材料。使用这些材料制造设备，元老院的化工永远只能算是扩大规模的实验室生产。
+　　“……这两种矿石对我们非常、非常、非常重要……”[展无涯][y004]用了三个非常来加重语气。他的焦急是理所当然的。化工部门要扩大产能，就得摆脱玻璃和陶瓷器这两种材料加工性能严重不足的设备制造材料。使用这些材料制造设备，元老院的化工永远只能算是扩大规模的实验室生产。
 
-　　化工口一天到晚嚷嚷着要耐腐蚀的金属管道和压力容器，医疗口急需不锈钢制造新的手术器械；机械工业部门也对高性能合金钢与防腐蚀镀层材料极为渴求，甚至财经口都提出过要发行不锈钢材质的“澳洲秘银币”。不过铬与镍在海南乃至整个中国都属于稀缺性资源，只有在文昌开采独居石时获得了一些伴生的铬铁砂。制造总监部集中技术力量试验性地冶炼了少许，产量对工业化生产而言远远不足。展无涯对此十分头疼。
+　　化工口一天到晚嚷嚷着要耐腐蚀的金属管道和压力容器，医疗口急需不锈钢制造新的手术器械；机械工业部门也对高性能合金钢与防腐蚀镀层材料极为渴求，甚至财经口都提出过要发行不锈钢材质的“澳洲秘银币”。不过铬与镍在海南乃至整个中国都属于稀缺性资源，只有在文昌开采独居石时获得了一些伴生的铬铁砂。制造总监部集中技术力量试验性地冶炼了少许，产量对工业化生产而言远远不足。[展无涯][y004]对此十分头疼。
 
 　　“有相当的难度，不过我们会设法的。”江山在电话里说，“我们要等情报员完全站稳脚跟，并且和马尼拉的上层建立起相当的关系才能着手。
 
@@ -49,3 +49,4 @@ tag: [normal]
 　　观众里发出几声欢叫，但随即就被船长的怒骂压了下去。银灰鸡将对手砍出血了。火红鸡的胸脯上现出不断扩展的黑斑，红色的鸡毛落了下来。但它再次以有力的翅膀猛殴对手，直至敌人摔倒，它跳上去准备结果对手。银灰鸡却以令人难以置信的神速反应蹲下、躲闪、避开了。形势瞬息万变，火红鸡转过身来将对方打得脸朝天，两次击中银灰鸡的胸脯，地面上留下点点血迹。但银灰鸡却设法退开了，跃到半空中躲避敌袭，落下来时，击中了红鸡的脖子。
 
 　　两只公鸡现在都是鸡毛散乱，鲜血淋漓，互相用脚爪踢斗，转着圈子，低着头，寻找对手的薄弱点。船长几乎要跳起来，喷出一连串混合着西班牙语和法语的狂叫。火红鸡似乎是受到了激励，猛然发起一阵使人眼花缭乱的疾风式进攻，占据了优势。它的翅膀猛力殴打着银灰鸡，挥舞着距铁将对方刺得血花飞溅。银灰鸡照例步步后退，眼看失败在即，就在船长狂喜地叫喊时，它令人难以置信地腾空而起，落下来不偏不倚把一根距铁插入火红鸡的心口。后者栽倒下去，成为一团微微蠕动地羽毛，嘴里冒着血。
+[y004]: /characters/y004 "展无涯"
