--- a/_posts/2013-3-14-5-44200.md
+++ b/_posts/2013-3-14-5-44200.md
@@ -38,7 +38,7 @@ tag: [normal]
 
 　　接下来就没有太多热烈讨论。[萧子山][y001]看到工业和农业部门的几个头头本来想发言的，但是听到用不了几条船参加后就明显松懈下来，开始打酱油式地交头接耳开小会了。不错不错，这次会议居然一直没有歪楼，真难得。
 
-　　“我说程栋啊，如果现在不发行纸币，银子留着暂时也没用，能不能拨给我们工业口啊？”展无涯看上还没到手的银子了，“反正银子放在你那里没有利息，也不会生小元宝，给我们做导线也不错啊。现在缺铜缺得太厉害了，陆军海军都抢。”
+　　“我说程栋啊，如果现在不发行纸币，银子留着暂时也没用，能不能拨给我们工业口啊？”[展无涯][y004]看上还没到手的银子了，“反正银子放在你那里没有利息，也不会生小元宝，给我们做导线也不错啊。现在缺铜缺得太厉害了，陆军海军都抢。”
 
 　　讨论立刻热闹起来。
 
@@ -85,3 +85,4 @@ tag: [normal]
 　　建造这艘一比一的欧式大船训练模型的建议是海军部提出来的。钱水廷的提案虽然连续二年没有获得通过，但是这件事也启发了海军部的元老军官们：将来一定会有不少这样以俘获敌船为目的的跳帮战斗。一般的中小型船只结构比较简单，而且海军都有实体船可以操练。但是象盖伦船或者荷兰“快艇”这样的大型船只排水量过千吨，甲板有三四层，内部结构十分复杂，如果对船内结构不熟悉，很容易在战斗中吃亏。这是海军要竭力避免的。
 [y001]: /characters/y001 "萧子山"
 [y002]: /characters/y002 "文德嗣"
+[y004]: /characters/y004 "展无涯"
