--- a/_posts/2013-7-27-6-10500.md
+++ b/_posts/2013-7-27-6-10500.md
@@ -8,13 +8,13 @@ tag: [normal]
 
 　　“我觉得这事是不是再缓一缓？”邬德看完了他的报告，说道。
 
-　　“为什么要缓一缓？”展无涯急切的说，“这可是个大突破”
+　　“为什么要缓一缓？”[展无涯][y004]急切的说，“这可是个大突破”
 
 　　邬德连连摇头：“大突破还谈不上，你也是搞工业出身，这样集中人力特别是元老技术员，不计成本的堆出来的东西能确保一定合格品率的稳产吗？还有这永磁体制造虽说19世纪就有人用四氧化三铁当永磁体造出了实用的发电机，不过我们来造恐怕也不是这么乐观吧。我就不再说这些东西能不能高产了。万一你这大跃进项目搞到一半，发电机和变压器制造因为永磁体和硅钢片的问题忽然拉稀了怎么办？你的电解铜车间不就成了废物？”
 
 　　要按照临高现有的发电能力来说，真要开建这个电解铜车间，全临高所有的电力都得用上才能保持保证持续生产。暂时压缩全县用电只能短时间凑合，要长期使用非得有新增电力供应不可。
 
-　　“电解铜、有色金属，全是我们最需要的东西，”展无涯说，“还有财政口要铸币,铸币也得用电解白银，这个缺口可就更大了，不上电解工艺无解。还有烧碱……”
+　　“电解铜、有色金属，全是我们最需要的东西，”[展无涯][y004]说，“还有财政口要铸币,铸币也得用电解白银，这个缺口可就更大了，不上电解工艺无解。还有烧碱……”
 
 　　“我个人的意见是，电力还是要搞。但是循序渐进的从简单的起步，先上19世纪的东西，再来20世纪的，大跃进怕是要出问题啊。”邬德皱着眉说，“我记得19世纪用低碳钢和铁芯也能制造几百千瓦的发电机。勉强用这些连次品都算不上的东西造设备，恐怕到时候会频繁的设备爆炸突然断电啊。”
 
@@ -34,7 +34,7 @@ tag: [normal]
 
 　　可以再讨论。”
 
-　　“好吧，我同意。”展无涯无奈的耸了下肩，“已经生产出来的硅钢片我希望能够用上。”
+　　“好吧，我同意。”[展无涯][y004]无奈的耸了下肩，“已经生产出来的硅钢片我希望能够用上。”
 
 　　“没有问题，可以进行实验性的运用。而且我希望硅钢片的试制工作能够继续下去，直到工业口能够稳定的生产出合格的硅钢片为止。至于电解铜车间，只要能解决电力，我就批准。”
 
@@ -76,3 +76,4 @@ tag: [normal]
 
 　　在他看来，澳洲人所依仗的是他们的“术”，他可不承认澳洲人有什么“学”。澳洲人的“船坚炮利”、“淫技奇巧”，包括治理临高的种种作为都不过是“术”罢了。这伙人不通圣人之学，再高明的术和走兽飞禽之道也没甚区别。
 [y002]: /characters/y002 "文德嗣"
+[y004]: /characters/y004 "展无涯"
